--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceDayPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceDayPattern.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSRecurrenceDayPattern.#ctor
   - CRMScript.NetServer.NSRecurrenceDayPattern.GetCycle()
   - CRMScript.NetServer.NSRecurrenceDayPattern.GetPattern()
-  - CRMScript.NetServer.NSRecurrenceDayPattern.#ctor
   - CRMScript.NetServer.NSRecurrenceDayPattern.SetCycle(Integer)
   - CRMScript.NetServer.NSRecurrenceDayPattern.SetPattern(Integer)
   name: NSRecurrenceDayPattern
@@ -16,42 +16,6 @@ items:
   fullName: CRMScript.NetServer.NSRecurrenceDayPattern
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSRecurrenceDayPattern.GetCycle()
-  commentId: M:CRMScript.NetServer.NSRecurrenceDayPattern.GetCycle()
-  id: 'GetCycle()'
-  so.intellisense: NSRecurrenceDayPattern.GetCycle
-  langs:
-  - crmscript
-  name: 'GetCycle()'
-  nameWithType: NSRecurrenceDayPattern.GetCycle()
-  fullName: CRMScript.NetServer.NSRecurrenceDayPattern.GetCycle()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetCycle()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecurrenceDayPattern.GetPattern()
-  commentId: M:CRMScript.NetServer.NSRecurrenceDayPattern.GetPattern()
-  id: 'GetPattern()'
-  so.intellisense: NSRecurrenceDayPattern.GetPattern
-  langs:
-  - crmscript
-  name: 'GetPattern()'
-  nameWithType: NSRecurrenceDayPattern.GetPattern()
-  fullName: CRMScript.NetServer.NSRecurrenceDayPattern.GetPattern()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetPattern()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDayPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceDayPattern.#ctor
@@ -68,6 +32,42 @@ items:
   syntax: 
     content: NSRecurrenceDayPattern
   example: 
+- uid: CRMScript.NetServer.NSRecurrenceDayPattern.GetCycle()
+  commentId: M:CRMScript.NetServer.NSRecurrenceDayPattern.GetCycle()
+  id: 'GetCycle()'
+  so.intellisense: NSRecurrenceDayPattern.GetCycle
+  langs:
+  - crmscript
+  name: 'GetCycle()'
+  nameWithType: NSRecurrenceDayPattern.GetCycle()
+  fullName: CRMScript.NetServer.NSRecurrenceDayPattern.GetCycle()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetCycle()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecurrenceDayPattern.GetPattern()
+  commentId: M:CRMScript.NetServer.NSRecurrenceDayPattern.GetPattern()
+  id: 'GetPattern()'
+  so.intellisense: NSRecurrenceDayPattern.GetPattern
+  langs:
+  - crmscript
+  name: 'GetPattern()'
+  nameWithType: NSRecurrenceDayPattern.GetPattern()
+  fullName: CRMScript.NetServer.NSRecurrenceDayPattern.GetPattern()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetPattern()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
 - uid: CRMScript.NetServer.NSRecurrenceDayPattern.SetCycle(Integer)
   commentId: M:CRMScript.NetServer.NSRecurrenceDayPattern.SetCycle(Integer)
   id: 'SetCycle(Integer)'
@@ -81,9 +81,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetCycle(Integer p_0)
+    content: Void SetCycle(Integer cycle)
     parameters:
-    - id: p_0
+    - id: cycle
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -102,9 +102,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetPattern(Integer p_0)
+    content: Void SetPattern(Integer pattern)
     parameters:
-    - id: p_0
+    - id: pattern
       type: CRMScript.Global.Integer
       description: 
     return:
