--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceWeekPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceWeekPattern.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSRecurrenceWeekPattern.#ctor
   - CRMScript.NetServer.NSRecurrenceWeekPattern.GetCycle()
   - CRMScript.NetServer.NSRecurrenceWeekPattern.GetWeekdays()
-  - CRMScript.NetServer.NSRecurrenceWeekPattern.#ctor
   - CRMScript.NetServer.NSRecurrenceWeekPattern.SetCycle(Integer)
   - CRMScript.NetServer.NSRecurrenceWeekPattern.SetWeekdays(Integer)
   name: NSRecurrenceWeekPattern
@@ -16,42 +16,6 @@ items:
   fullName: CRMScript.NetServer.NSRecurrenceWeekPattern
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSRecurrenceWeekPattern.GetCycle()
-  commentId: M:CRMScript.NetServer.NSRecurrenceWeekPattern.GetCycle()
-  id: 'GetCycle()'
-  so.intellisense: NSRecurrenceWeekPattern.GetCycle
-  langs:
-  - crmscript
-  name: 'GetCycle()'
-  nameWithType: NSRecurrenceWeekPattern.GetCycle()
-  fullName: CRMScript.NetServer.NSRecurrenceWeekPattern.GetCycle()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetCycle()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecurrenceWeekPattern.GetWeekdays()
-  commentId: M:CRMScript.NetServer.NSRecurrenceWeekPattern.GetWeekdays()
-  id: 'GetWeekdays()'
-  so.intellisense: NSRecurrenceWeekPattern.GetWeekdays
-  langs:
-  - crmscript
-  name: 'GetWeekdays()'
-  nameWithType: NSRecurrenceWeekPattern.GetWeekdays()
-  fullName: CRMScript.NetServer.NSRecurrenceWeekPattern.GetWeekdays()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetWeekdays()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceWeekPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceWeekPattern.#ctor
@@ -68,6 +32,42 @@ items:
   syntax: 
     content: NSRecurrenceWeekPattern
   example: 
+- uid: CRMScript.NetServer.NSRecurrenceWeekPattern.GetCycle()
+  commentId: M:CRMScript.NetServer.NSRecurrenceWeekPattern.GetCycle()
+  id: 'GetCycle()'
+  so.intellisense: NSRecurrenceWeekPattern.GetCycle
+  langs:
+  - crmscript
+  name: 'GetCycle()'
+  nameWithType: NSRecurrenceWeekPattern.GetCycle()
+  fullName: CRMScript.NetServer.NSRecurrenceWeekPattern.GetCycle()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetCycle()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecurrenceWeekPattern.GetWeekdays()
+  commentId: M:CRMScript.NetServer.NSRecurrenceWeekPattern.GetWeekdays()
+  id: 'GetWeekdays()'
+  so.intellisense: NSRecurrenceWeekPattern.GetWeekdays
+  langs:
+  - crmscript
+  name: 'GetWeekdays()'
+  nameWithType: NSRecurrenceWeekPattern.GetWeekdays()
+  fullName: CRMScript.NetServer.NSRecurrenceWeekPattern.GetWeekdays()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetWeekdays()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
 - uid: CRMScript.NetServer.NSRecurrenceWeekPattern.SetCycle(Integer)
   commentId: M:CRMScript.NetServer.NSRecurrenceWeekPattern.SetCycle(Integer)
   id: 'SetCycle(Integer)'
@@ -81,9 +81,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetCycle(Integer p_0)
+    content: Void SetCycle(Integer cycle)
     parameters:
-    - id: p_0
+    - id: cycle
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -102,9 +102,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetWeekdays(Integer p_0)
+    content: Void SetWeekdays(Integer weekdays)
     parameters:
-    - id: p_0
+    - id: weekdays
       type: CRMScript.Global.Integer
       description: 
     return:
