--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceYearPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceYearPattern.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSRecurrenceYearPattern.#ctor
   - CRMScript.NetServer.NSRecurrenceYearPattern.GetCycle()
   - CRMScript.NetServer.NSRecurrenceYearPattern.GetDay()
   - CRMScript.NetServer.NSRecurrenceYearPattern.GetPattern()
   - CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekday()
   - CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekOfMonth()
-  - CRMScript.NetServer.NSRecurrenceYearPattern.#ctor
   - CRMScript.NetServer.NSRecurrenceYearPattern.SetCycle(Integer)
   - CRMScript.NetServer.NSRecurrenceYearPattern.SetDay(Integer)
   - CRMScript.NetServer.NSRecurrenceYearPattern.SetPattern(Integer)
@@ -22,96 +22,6 @@ items:
   fullName: CRMScript.NetServer.NSRecurrenceYearPattern
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetCycle()
-  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetCycle()
-  id: 'GetCycle()'
-  so.intellisense: NSRecurrenceYearPattern.GetCycle
-  langs:
-  - crmscript
-  name: 'GetCycle()'
-  nameWithType: NSRecurrenceYearPattern.GetCycle()
-  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetCycle()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetCycle()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetDay()
-  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetDay()
-  id: 'GetDay()'
-  so.intellisense: NSRecurrenceYearPattern.GetDay
-  langs:
-  - crmscript
-  name: 'GetDay()'
-  nameWithType: NSRecurrenceYearPattern.GetDay()
-  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetDay()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetDay()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetPattern()
-  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetPattern()
-  id: 'GetPattern()'
-  so.intellisense: NSRecurrenceYearPattern.GetPattern
-  langs:
-  - crmscript
-  name: 'GetPattern()'
-  nameWithType: NSRecurrenceYearPattern.GetPattern()
-  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetPattern()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetPattern()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekday()
-  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekday()
-  id: 'GetWeekday()'
-  so.intellisense: NSRecurrenceYearPattern.GetWeekday
-  langs:
-  - crmscript
-  name: 'GetWeekday()'
-  nameWithType: NSRecurrenceYearPattern.GetWeekday()
-  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekday()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetWeekday()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekOfMonth()
-  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekOfMonth()
-  id: 'GetWeekOfMonth()'
-  so.intellisense: NSRecurrenceYearPattern.GetWeekOfMonth
-  langs:
-  - crmscript
-  name: 'GetWeekOfMonth()'
-  nameWithType: NSRecurrenceYearPattern.GetWeekOfMonth()
-  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekOfMonth()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetWeekOfMonth()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceYearPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.#ctor
@@ -128,6 +38,96 @@ items:
   syntax: 
     content: NSRecurrenceYearPattern
   example: 
+- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetCycle()
+  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetCycle()
+  id: 'GetCycle()'
+  so.intellisense: NSRecurrenceYearPattern.GetCycle
+  langs:
+  - crmscript
+  name: 'GetCycle()'
+  nameWithType: NSRecurrenceYearPattern.GetCycle()
+  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetCycle()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetCycle()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetDay()
+  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetDay()
+  id: 'GetDay()'
+  so.intellisense: NSRecurrenceYearPattern.GetDay
+  langs:
+  - crmscript
+  name: 'GetDay()'
+  nameWithType: NSRecurrenceYearPattern.GetDay()
+  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetDay()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetDay()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetPattern()
+  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetPattern()
+  id: 'GetPattern()'
+  so.intellisense: NSRecurrenceYearPattern.GetPattern
+  langs:
+  - crmscript
+  name: 'GetPattern()'
+  nameWithType: NSRecurrenceYearPattern.GetPattern()
+  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetPattern()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetPattern()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekday()
+  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekday()
+  id: 'GetWeekday()'
+  so.intellisense: NSRecurrenceYearPattern.GetWeekday
+  langs:
+  - crmscript
+  name: 'GetWeekday()'
+  nameWithType: NSRecurrenceYearPattern.GetWeekday()
+  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekday()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetWeekday()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekOfMonth()
+  commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekOfMonth()
+  id: 'GetWeekOfMonth()'
+  so.intellisense: NSRecurrenceYearPattern.GetWeekOfMonth
+  langs:
+  - crmscript
+  name: 'GetWeekOfMonth()'
+  nameWithType: NSRecurrenceYearPattern.GetWeekOfMonth()
+  fullName: CRMScript.NetServer.NSRecurrenceYearPattern.GetWeekOfMonth()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetWeekOfMonth()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
 - uid: CRMScript.NetServer.NSRecurrenceYearPattern.SetCycle(Integer)
   commentId: M:CRMScript.NetServer.NSRecurrenceYearPattern.SetCycle(Integer)
   id: 'SetCycle(Integer)'
@@ -141,9 +141,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetCycle(Integer p_0)
+    content: Void SetCycle(Integer cycle)
     parameters:
-    - id: p_0
+    - id: cycle
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -162,9 +162,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetDay(Integer p_0)
+    content: Void SetDay(Integer day)
     parameters:
-    - id: p_0
+    - id: day
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -183,9 +183,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetPattern(Integer p_0)
+    content: Void SetPattern(Integer pattern)
     parameters:
-    - id: p_0
+    - id: pattern
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -204,9 +204,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetWeekday(Integer p_0)
+    content: Void SetWeekday(Integer weekday)
     parameters:
-    - id: p_0
+    - id: weekday
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -225,9 +225,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetWeekOfMonth(Integer p_0)
+    content: Void SetWeekOfMonth(Integer week)
     parameters:
-    - id: p_0
+    - id: week
       type: CRMScript.Global.Integer
       description: 
     return:
