--- a/docs/api-reference/CRMScript.NetServer.NSRefCountEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRefCountEntity.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSRefCountEntity.#ctor
   - CRMScript.NetServer.NSRefCountEntity.GetAllocate()
   - CRMScript.NetServer.NSRefCountEntity.GetAllowBlank()
   - CRMScript.NetServer.NSRefCountEntity.GetCurrentValue()
@@ -17,7 +18,6 @@ items:
   - CRMScript.NetServer.NSRefCountEntity.GetSuggestedRecords()
   - CRMScript.NetServer.NSRefCountEntity.GetTravelPrefix()
   - CRMScript.NetServer.NSRefCountEntity.GetUnique()
-  - CRMScript.NetServer.NSRefCountEntity.#ctor
   - CRMScript.NetServer.NSRefCountEntity.SetAllocate(Bool)
   - CRMScript.NetServer.NSRefCountEntity.SetAllowBlank(Bool)
   - CRMScript.NetServer.NSRefCountEntity.SetCurrentValue(Integer)
@@ -35,6 +35,21 @@ items:
   type: Class
   summary: 
   example: 
+- uid: CRMScript.NetServer.NSRefCountEntity.#ctor
+  commentId: M:CRMScript.NetServer.NSRefCountEntity.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSRefCountEntity
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSRefCountEntity.#ctor
+  fullName: CRMScript.NetServer.NSRefCountEntity.#ctor
+  type: Constructor
+  summary: 
+  remarks: 
+  syntax: 
+    content: NSRefCountEntity
+  example: 
 - uid: CRMScript.NetServer.NSRefCountEntity.GetAllocate()
   commentId: M:CRMScript.NetServer.NSRefCountEntity.GetAllocate()
   id: 'GetAllocate()'
@@ -45,14 +60,14 @@ items:
   nameWithType: NSRefCountEntity.GetAllocate()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetAllocate()
   type: Method
-  summary: "\nAllocate numbers automatically\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetAllocate()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description:
+      description: Allocate numbers automatically
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nBool allocate = thing.GetAllocate();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetAllowBlank()
@@ -65,14 +80,14 @@ items:
   nameWithType: NSRefCountEntity.GetAllowBlank()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetAllowBlank()
   type: Method
-  summary: "\nAllow blank  as a valid value\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetAllowBlank()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description:
+      description: Allow blank  as a valid value
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nBool allowBlank = thing.GetAllowBlank();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetCurrentValue()
@@ -85,14 +100,14 @@ items:
   nameWithType: NSRefCountEntity.GetCurrentValue()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetCurrentValue()
   type: Method
-  summary: "\nCurrent value of counter\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetCurrentValue()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Current value of counter
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nInteger currentValue = thing.GetCurrentValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetField()
@@ -105,14 +120,14 @@ items:
   nameWithType: NSRefCountEntity.GetField()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetField()
   type: Method
-  summary: "\nField identifier in string format table.field\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetField()
     parameters: []
     return:
       type: CRMScript.Global.String
-      description:
+      description: Field identifier in string format table.field
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nString field = thing.GetField();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetReadOnly()
@@ -125,14 +140,14 @@ items:
   nameWithType: NSRefCountEntity.GetReadOnly()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetReadOnly()
   type: Method
-  summary: "\nTarget field is read only in GUI\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetReadOnly()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description:
+      description: Target field is read only in GUI
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nBool readOnly = thing.GetReadOnly();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetRecordId()
@@ -145,14 +160,14 @@ items:
   nameWithType: NSRefCountEntity.GetRecordId()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetRecordId()
   type: Method
-  summary: "\nRecord id in target table, used when there are separate counters for each target record\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRecordId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Record ID in target table, used when there are separate counters for each target record
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nInteger recordId = thing.GetRecordId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetRefCountsId()
@@ -165,14 +180,14 @@ items:
   nameWithType: NSRefCountEntity.GetRefCountsId()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetRefCountsId()
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRefCountsId()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Primary key
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nInteger refCountsId = thing.GetRefCountsId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetSatPrefix()
@@ -185,14 +200,14 @@ items:
   nameWithType: NSRefCountEntity.GetSatPrefix()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetSatPrefix()
   type: Method
-  summary: "\nsize of prefix for Satellite use of this counter\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSatPrefix()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: size of prefix for Satellite use of this counter
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nInteger satPrefix = thing.GetSatPrefix();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetSuggestedRecords()
@@ -205,13 +220,14 @@ items:
   nameWithType: NSRefCountEntity.GetSuggestedRecords()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetSuggestedRecords()
   type: Method
-  summary: "\nList of valid entities, the associated record is selected in the list, used records are filtered out<p></p>\n<strong>Returns:</strong>NSMDOListItem[]<p></p>\n<pre><code>NSRefCountEntity thing;\nNSMDOListItem[] suggestedRecords = thing.GetSuggestedRecords();</code></pre>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSMDOListItem[] GetSuggestedRecords()
     parameters: []
     return:
       type: CRMScript.NetServer.NSMDOListItem[]
+      description: List of valid entities, the associated record is selected in the list, used records are filtered out
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nNSMDOListItem[] suggestedRecords = thing.GetSuggestedRecords();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetTravelPrefix()
@@ -224,14 +240,14 @@ items:
   nameWithType: NSRefCountEntity.GetTravelPrefix()
   fullName: CRMScript.NetServer.NSRefCountEntity.GetTravelPrefix()
   type: Method
-  summary: "\nsize of prefix for Travel use of ths counter\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTravelPrefix()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: size of prefix for Travel use of ths counter
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nInteger travelPrefix = thing.GetTravelPrefix();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRefCountEntity.GetUnique()
@@ -254,21 +270,6 @@ items:
       description:
   example: 
   - "\n<pre><code>NSRefCountEntity thing;\nBool unique = thing.GetUnique();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRefCountEntity.#ctor
-  commentId: M:CRMScript.NetServer.NSRefCountEntity.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSRefCountEntity
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSRefCountEntity.#ctor
-  fullName: CRMScript.NetServer.NSRefCountEntity.#ctor
-  type: Constructor
-  summary: 
-  remarks: 
-  syntax: 
-    content: NSRefCountEntity
-  example: 
 - uid: CRMScript.NetServer.NSRefCountEntity.SetAllocate(Bool)
   commentId: M:CRMScript.NetServer.NSRefCountEntity.SetAllocate(Bool)
   id: 'SetAllocate(Bool)'
@@ -279,14 +280,14 @@ items:
   nameWithType: NSRefCountEntity.SetAllocate(Bool)
   fullName: CRMScript.NetServer.NSRefCountEntity.SetAllocate(Bool)
   type: Method
-  summary: "\nAllocate numbers automatically\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAllocate(Bool allocate)
     parameters:
     - id: allocate
       type: CRMScript.Global.Bool
-      description: 
+      description:  Allocate numbers automatically
     return:
       type: CRMScript.Global.Void
   example: 
@@ -301,14 +302,14 @@ items:
   nameWithType: NSRefCountEntity.SetAllowBlank(Bool)
   fullName: CRMScript.NetServer.NSRefCountEntity.SetAllowBlank(Bool)
   type: Method
-  summary: "\nAllow blank  as a valid value\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAllowBlank(Bool allowBlank)
     parameters:
     - id: allowBlank
       type: CRMScript.Global.Bool
-      description: 
+      description:  Allow blank  as a valid value
     return:
       type: CRMScript.Global.Void
   example: 
@@ -323,14 +324,14 @@ items:
   nameWithType: NSRefCountEntity.SetCurrentValue(Integer)
   fullName: CRMScript.NetServer.NSRefCountEntity.SetCurrentValue(Integer)
   type: Method
-  summary: "\nCurrent value of counter\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCurrentValue(Integer currentValue)
     parameters:
     - id: currentValue
       type: CRMScript.Global.Integer
-      description: 
+      description:  Current value of counter
     return:
       type: CRMScript.Global.Void
   example: 
@@ -345,14 +346,14 @@ items:
   nameWithType: NSRefCountEntity.SetField(String)
   fullName: CRMScript.NetServer.NSRefCountEntity.SetField(String)
   type: Method
-  summary: "\nField identifier in string format table.field\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetField(String field)
     parameters:
     - id: field
       type: CRMScript.Global.String
-      description: 
+      description:  Field identifier in string format table.field
     return:
       type: CRMScript.Global.Void
   example: 
@@ -367,14 +368,14 @@ items:
   nameWithType: NSRefCountEntity.SetReadOnly(Bool)
   fullName: CRMScript.NetServer.NSRefCountEntity.SetReadOnly(Bool)
   type: Method
-  summary: "\nTarget field is read only in GUI\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetReadOnly(Bool readOnly)
     parameters:
     - id: readOnly
       type: CRMScript.Global.Bool
-      description: 
+      description: Target field is read only in GUI
     return:
       type: CRMScript.Global.Void
   example: 
@@ -389,14 +390,14 @@ items:
   nameWithType: NSRefCountEntity.SetRecordId(Integer)
   fullName: CRMScript.NetServer.NSRefCountEntity.SetRecordId(Integer)
   type: Method
-  summary: "\nRecord id in target table, used when there are separate counters for each target record\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRecordId(Integer recordId)
     parameters:
     - id: recordId
       type: CRMScript.Global.Integer
-      description: 
+      description:  Record ID in target table, used when there are separate counters for each target record
     return:
       type: CRMScript.Global.Void
   example: 
@@ -411,14 +412,14 @@ items:
   nameWithType: NSRefCountEntity.SetRefCountsId(Integer)
   fullName: CRMScript.NetServer.NSRefCountEntity.SetRefCountsId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRefCountsId(Integer refCountsId)
     parameters:
     - id: refCountsId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -433,14 +434,14 @@ items:
   nameWithType: NSRefCountEntity.SetSatPrefix(Integer)
   fullName: CRMScript.NetServer.NSRefCountEntity.SetSatPrefix(Integer)
   type: Method
-  summary: "\nsize of prefix for Satellite use of this counter\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSatPrefix(Integer satPrefix)
     parameters:
     - id: satPrefix
       type: CRMScript.Global.Integer
-      description: 
+      description:  size of prefix for Satellite use of this counter
     return:
       type: CRMScript.Global.Void
   example: 
@@ -455,14 +456,14 @@ items:
   nameWithType: NSRefCountEntity.SetSuggestedRecords(NSMDOListItem[])
   fullName: CRMScript.NetServer.NSRefCountEntity.SetSuggestedRecords(NSMDOListItem[])
   type: Method
-  summary: "\nList of valid entities, the associated record is selected in the list, used records are filtered out\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSuggestedRecords(NSMDOListItem[] suggestedRecords)
     parameters:
     - id: suggestedRecords
       type: CRMScript.NetServer.NSMDOListItem[]
-      description: 
+      description:  List of valid entities, the associated record is selected in the list, used records are filtered out
     return:
       type: CRMScript.Global.Void
   example: 
@@ -477,14 +478,14 @@ items:
   nameWithType: NSRefCountEntity.SetTravelPrefix(Integer)
   fullName: CRMScript.NetServer.NSRefCountEntity.SetTravelPrefix(Integer)
   type: Method
-  summary: "\nsize of prefix for Travel use of ths counter\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTravelPrefix(Integer travelPrefix)
     parameters:
     - id: travelPrefix
       type: CRMScript.Global.Integer
-      description: 
+      description:  size of prefix for Travel use of ths counter
     return:
       type: CRMScript.Global.Void
   example: 
