--- a/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSReportEntity.#ctor
   - CRMScript.NetServer.NSReportEntity.GetAssociateId()
   - CRMScript.NetServer.NSReportEntity.GetDescription()
   - CRMScript.NetServer.NSReportEntity.GetName()
@@ -14,7 +15,6 @@ items:
   - CRMScript.NetServer.NSReportEntity.GetReportId()
   - CRMScript.NetServer.NSReportEntity.GetReportLayout()
   - CRMScript.NetServer.NSReportEntity.GetTemplateId()
-  - CRMScript.NetServer.NSReportEntity.#ctor
   - CRMScript.NetServer.NSReportEntity.SetAssociateId(Integer)
   - CRMScript.NetServer.NSReportEntity.SetDescription(String)
   - CRMScript.NetServer.NSReportEntity.SetName(String)
@@ -29,166 +29,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSReportEntity.GetAssociateId()
-  commentId: M:CRMScript.NetServer.NSReportEntity.GetAssociateId()
-  id: 'GetAssociateId()'
-  so.intellisense: NSReportEntity.GetAssociateId
-  langs:
-  - crmscript
-  name: 'GetAssociateId()'
-  nameWithType: NSReportEntity.GetAssociateId()
-  fullName: CRMScript.NetServer.NSReportEntity.GetAssociateId()
-  type: Method
-  summary: "\nThe owner of the report.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetAssociateId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSReportEntity thing;\nInteger associateId = thing.GetAssociateId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportEntity.GetDescription()
-  commentId: M:CRMScript.NetServer.NSReportEntity.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSReportEntity.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSReportEntity.GetDescription()
-  fullName: CRMScript.NetServer.NSReportEntity.GetDescription()
-  type: Method
-  summary: "\nThe description of the report.\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSReportEntity thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportEntity.GetName()
-  commentId: M:CRMScript.NetServer.NSReportEntity.GetName()
-  id: 'GetName()'
-  so.intellisense: NSReportEntity.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSReportEntity.GetName()
-  fullName: CRMScript.NetServer.NSReportEntity.GetName()
-  type: Method
-  summary: "\nThe name of the report\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSReportEntity thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportEntity.GetPublished()
-  commentId: M:CRMScript.NetServer.NSReportEntity.GetPublished()
-  id: 'GetPublished()'
-  so.intellisense: NSReportEntity.GetPublished
-  langs:
-  - crmscript
-  name: 'GetPublished()'
-  nameWithType: NSReportEntity.GetPublished()
-  fullName: CRMScript.NetServer.NSReportEntity.GetPublished()
-  type: Method
-  summary: "\nIs the report published?\n"
-  remarks: 
-  syntax: 
-    content: Bool GetPublished()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSReportEntity thing;\nBool published = thing.GetPublished();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportEntity.GetReportCategory()
-  commentId: M:CRMScript.NetServer.NSReportEntity.GetReportCategory()
-  id: 'GetReportCategory()'
-  so.intellisense: NSReportEntity.GetReportCategory
-  langs:
-  - crmscript
-  name: 'GetReportCategory()'
-  nameWithType: NSReportEntity.GetReportCategory()
-  fullName: CRMScript.NetServer.NSReportEntity.GetReportCategory()
-  type: Method
-  summary: "\nThe category of the report.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = All</li><li>Enum: 2 = Contact</li><li>Enum: 3 = Project</li><li>Enum: 4 = Sale</li><li>Enum: 5 = Appointment</li><li>Enum: 6 = Selection</li><li>Enum: 7 = Person</li><li>Enum: 8 = Diary</li><li>Enum: 9 = Favorites</li></ul><pre><code>NSReportEntity thing;\nInteger reportCategory = thing.GetReportCategory();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetReportCategory()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSReportEntity thing;\nInteger reportCategory = thing.GetReportCategory();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportEntity.GetReportId()
-  commentId: M:CRMScript.NetServer.NSReportEntity.GetReportId()
-  id: 'GetReportId()'
-  so.intellisense: NSReportEntity.GetReportId
-  langs:
-  - crmscript
-  name: 'GetReportId()'
-  nameWithType: NSReportEntity.GetReportId()
-  fullName: CRMScript.NetServer.NSReportEntity.GetReportId()
-  type: Method
-  summary: "\nThe ID of the report.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetReportId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSReportEntity thing;\nInteger reportId = thing.GetReportId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportEntity.GetReportLayout()
-  commentId: M:CRMScript.NetServer.NSReportEntity.GetReportLayout()
-  id: 'GetReportLayout()'
-  so.intellisense: NSReportEntity.GetReportLayout
-  langs:
-  - crmscript
-  name: 'GetReportLayout()'
-  nameWithType: NSReportEntity.GetReportLayout()
-  fullName: CRMScript.NetServer.NSReportEntity.GetReportLayout()
-  type: Method
-  summary: "\nThe layout of the report.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = List</li><li>Enum: 2 = Label</li><li>Enum: 3 = GroupList</li><li>Enum: 4 = CrossTable</li><li>Enum: 5 = CalendarWeek5</li><li>Enum: 6 = CalendarWeek7</li><li>Enum: 7 = CalendarMonth</li><li>Enum: 8 = Text</li></ul><pre><code>NSReportEntity thing;\nInteger reportLayout = thing.GetReportLayout();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetReportLayout()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSReportEntity thing;\nInteger reportLayout = thing.GetReportLayout();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportEntity.GetTemplateId()
-  commentId: M:CRMScript.NetServer.NSReportEntity.GetTemplateId()
-  id: 'GetTemplateId()'
-  so.intellisense: NSReportEntity.GetTemplateId
-  langs:
-  - crmscript
-  name: 'GetTemplateId()'
-  nameWithType: NSReportEntity.GetTemplateId()
-  fullName: CRMScript.NetServer.NSReportEntity.GetTemplateId()
-  type: Method
-  summary: "\nThe ID of report template.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetTemplateId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSReportEntity thing;\nInteger templateId = thing.GetTemplateId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportEntity.#ctor
   commentId: M:CRMScript.NetServer.NSReportEntity.#ctor
   id: '#ctor'
@@ -204,6 +44,166 @@ items:
   syntax: 
     content: NSReportEntity
   example: 
+- uid: CRMScript.NetServer.NSReportEntity.GetAssociateId()
+  commentId: M:CRMScript.NetServer.NSReportEntity.GetAssociateId()
+  id: 'GetAssociateId()'
+  so.intellisense: NSReportEntity.GetAssociateId
+  langs:
+  - crmscript
+  name: 'GetAssociateId()'
+  nameWithType: NSReportEntity.GetAssociateId()
+  fullName: CRMScript.NetServer.NSReportEntity.GetAssociateId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetAssociateId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The owner of the report.
+  example: 
+  - "\n<pre><code>NSReportEntity thing;\nInteger associateId = thing.GetAssociateId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReportEntity.GetDescription()
+  commentId: M:CRMScript.NetServer.NSReportEntity.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSReportEntity.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSReportEntity.GetDescription()
+  fullName: CRMScript.NetServer.NSReportEntity.GetDescription()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The description of the report.
+  example: 
+  - "\n<pre><code>NSReportEntity thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReportEntity.GetName()
+  commentId: M:CRMScript.NetServer.NSReportEntity.GetName()
+  id: 'GetName()'
+  so.intellisense: NSReportEntity.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSReportEntity.GetName()
+  fullName: CRMScript.NetServer.NSReportEntity.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the report
+  example: 
+  - "\n<pre><code>NSReportEntity thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReportEntity.GetPublished()
+  commentId: M:CRMScript.NetServer.NSReportEntity.GetPublished()
+  id: 'GetPublished()'
+  so.intellisense: NSReportEntity.GetPublished
+  langs:
+  - crmscript
+  name: 'GetPublished()'
+  nameWithType: NSReportEntity.GetPublished()
+  fullName: CRMScript.NetServer.NSReportEntity.GetPublished()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetPublished()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Is the report published?
+  example: 
+  - "\n<pre><code>NSReportEntity thing;\nBool published = thing.GetPublished();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReportEntity.GetReportCategory()
+  commentId: M:CRMScript.NetServer.NSReportEntity.GetReportCategory()
+  id: 'GetReportCategory()'
+  so.intellisense: NSReportEntity.GetReportCategory
+  langs:
+  - crmscript
+  name: 'GetReportCategory()'
+  nameWithType: NSReportEntity.GetReportCategory()
+  fullName: CRMScript.NetServer.NSReportEntity.GetReportCategory()
+  type: Method
+  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = All</li><li>Enum: 2 = Contact</li><li>Enum: 3 = Project</li><li>Enum: 4 = Sale</li><li>Enum: 5 = Appointment</li><li>Enum: 6 = Selection</li><li>Enum: 7 = Person</li><li>Enum: 8 = Diary</li><li>Enum: 9 = Favorites</li></ul>\n"
+  remarks: 
+  syntax: 
+    content: Integer GetReportCategory()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The category of the report.
+  example: 
+  - "\n<pre><code>NSReportEntity thing;\nInteger reportCategory = thing.GetReportCategory();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReportEntity.GetReportId()
+  commentId: M:CRMScript.NetServer.NSReportEntity.GetReportId()
+  id: 'GetReportId()'
+  so.intellisense: NSReportEntity.GetReportId
+  langs:
+  - crmscript
+  name: 'GetReportId()'
+  nameWithType: NSReportEntity.GetReportId()
+  fullName: CRMScript.NetServer.NSReportEntity.GetReportId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetReportId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the report.
+  example: 
+  - "\n<pre><code>NSReportEntity thing;\nInteger reportId = thing.GetReportId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReportEntity.GetReportLayout()
+  commentId: M:CRMScript.NetServer.NSReportEntity.GetReportLayout()
+  id: 'GetReportLayout()'
+  so.intellisense: NSReportEntity.GetReportLayout
+  langs:
+  - crmscript
+  name: 'GetReportLayout()'
+  nameWithType: NSReportEntity.GetReportLayout()
+  fullName: CRMScript.NetServer.NSReportEntity.GetReportLayout()
+  type: Method
+  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = List</li><li>Enum: 2 = Label</li><li>Enum: 3 = GroupList</li><li>Enum: 4 = CrossTable</li><li>Enum: 5 = CalendarWeek5</li><li>Enum: 6 = CalendarWeek7</li><li>Enum: 7 = CalendarMonth</li><li>Enum: 8 = Text</li></ul>\n"
+  remarks: 
+  syntax: 
+    content: Integer GetReportLayout()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The layout of the report.
+  example: 
+  - "\n<pre><code>NSReportEntity thing;\nInteger reportLayout = thing.GetReportLayout();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReportEntity.GetTemplateId()
+  commentId: M:CRMScript.NetServer.NSReportEntity.GetTemplateId()
+  id: 'GetTemplateId()'
+  so.intellisense: NSReportEntity.GetTemplateId
+  langs:
+  - crmscript
+  name: 'GetTemplateId()'
+  nameWithType: NSReportEntity.GetTemplateId()
+  fullName: CRMScript.NetServer.NSReportEntity.GetTemplateId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetTemplateId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of report template.
+  example: 
+  - "\n<pre><code>NSReportEntity thing;\nInteger templateId = thing.GetTemplateId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportEntity.SetAssociateId(Integer)
   commentId: M:CRMScript.NetServer.NSReportEntity.SetAssociateId(Integer)
   id: 'SetAssociateId(Integer)'
@@ -214,14 +214,14 @@ items:
   nameWithType: NSReportEntity.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSReportEntity.SetAssociateId(Integer)
   type: Method
-  summary: "\nThe owner of the report.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
     parameters:
     - id: associateId
       type: CRMScript.Global.Integer
-      description: 
+      description: The owner of the report.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSReportEntity.SetDescription(String)
   fullName: CRMScript.NetServer.NSReportEntity.SetDescription(String)
   type: Method
-  summary: "\nThe description of the report.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: The description of the report.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSReportEntity.SetName(String)
   fullName: CRMScript.NetServer.NSReportEntity.SetName(String)
   type: Method
-  summary: "\nThe name of the report\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name of the report
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSReportEntity.SetPublished(Bool)
   fullName: CRMScript.NetServer.NSReportEntity.SetPublished(Bool)
   type: Method
-  summary: "\nIs the report published?\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPublished(Bool published)
     parameters:
     - id: published
       type: CRMScript.Global.Bool
-      description: 
+      description: Is the report published?
     return:
       type: CRMScript.Global.Void
   example: 
@@ -302,14 +302,14 @@ items:
   nameWithType: NSReportEntity.SetReportCategory(Integer)
   fullName: CRMScript.NetServer.NSReportEntity.SetReportCategory(Integer)
   type: Method
-  summary: "\nThe category of the report.\n"
-  remarks: "\n<p>See enum reportCategory.</p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetReportCategory(Integer reportCategory)
     parameters:
     - id: reportCategory
       type: CRMScript.Global.Integer
-      description: 
+      description: The category of the report. See enum reportCategory.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -324,14 +324,14 @@ items:
   nameWithType: NSReportEntity.SetReportId(Integer)
   fullName: CRMScript.NetServer.NSReportEntity.SetReportId(Integer)
   type: Method
-  summary: "\nThe ID of the report.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetReportId(Integer reportId)
     parameters:
     - id: reportId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the report.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -346,14 +346,14 @@ items:
   nameWithType: NSReportEntity.SetReportLayout(Integer)
   fullName: CRMScript.NetServer.NSReportEntity.SetReportLayout(Integer)
   type: Method
-  summary: "\nThe layout of the report.\n"
-  remarks: "\n<p>See enum reportLayout.</p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetReportLayout(Integer reportLayout)
     parameters:
     - id: reportLayout
       type: CRMScript.Global.Integer
-      description: 
+      description: The layout of the report. See enum reportLayout.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -368,14 +368,14 @@ items:
   nameWithType: NSReportEntity.SetTemplateId(Integer)
   fullName: CRMScript.NetServer.NSReportEntity.SetTemplateId(Integer)
   type: Method
-  summary: "\nThe ID of report template.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTemplateId(Integer templateId)
     parameters:
     - id: templateId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of report template.
     return:
       type: CRMScript.Global.Void
   example: 
