--- a/docs/api-reference/CRMScript.NetServer.NSResolvedPerson.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSResolvedPerson.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSResolvedPerson.#ctor
   - CRMScript.NetServer.NSResolvedPerson.GetPerson()
   - CRMScript.NetServer.NSResolvedPerson.GetPersonCreated()
-  - CRMScript.NetServer.NSResolvedPerson.#ctor
   - CRMScript.NetServer.NSResolvedPerson.SetPerson(NSPersonEntity)
   - CRMScript.NetServer.NSResolvedPerson.SetPersonCreated(Bool)
   name: NSResolvedPerson
@@ -17,45 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSResolvedPerson.GetPerson()
-  commentId: M:CRMScript.NetServer.NSResolvedPerson.GetPerson()
-  id: 'GetPerson()'
-  so.intellisense: NSResolvedPerson.GetPerson
-  langs:
-  - crmscript
-  name: 'GetPerson()'
-  nameWithType: NSResolvedPerson.GetPerson()
-  fullName: CRMScript.NetServer.NSResolvedPerson.GetPerson()
-  type: Method
-  summary: "\nThe resolved NSPersonEntity instance.\n"
-  remarks: 
-  syntax: 
-    content: NSPersonEntity GetPerson()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSPersonEntity
-  example: 
-  - "\n<pre><code>NSResolvedPerson thing;\nNSPersonEntity person = thing.GetPerson();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResolvedPerson.GetPersonCreated()
-  commentId: M:CRMScript.NetServer.NSResolvedPerson.GetPersonCreated()
-  id: 'GetPersonCreated()'
-  so.intellisense: NSResolvedPerson.GetPersonCreated
-  langs:
-  - crmscript
-  name: 'GetPersonCreated()'
-  nameWithType: NSResolvedPerson.GetPersonCreated()
-  fullName: CRMScript.NetServer.NSResolvedPerson.GetPersonCreated()
-  type: Method
-  summary: "\nIndicates if the resolved person was created or not.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetPersonCreated()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSResolvedPerson thing;\nBool personCreated = thing.GetPersonCreated();</code></pre>\n"
 - uid: CRMScript.NetServer.NSResolvedPerson.#ctor
   commentId: M:CRMScript.NetServer.NSResolvedPerson.#ctor
   id: '#ctor'
@@ -71,6 +32,46 @@ items:
   syntax: 
     content: NSResolvedPerson
   example: 
+- uid: CRMScript.NetServer.NSResolvedPerson.GetPerson()
+  commentId: M:CRMScript.NetServer.NSResolvedPerson.GetPerson()
+  id: 'GetPerson()'
+  so.intellisense: NSResolvedPerson.GetPerson
+  langs:
+  - crmscript
+  name: 'GetPerson()'
+  nameWithType: NSResolvedPerson.GetPerson()
+  fullName: CRMScript.NetServer.NSResolvedPerson.GetPerson()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSPersonEntity GetPerson()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSPersonEntity
+      description: The resolved NSPersonEntity instance.
+  example: 
+  - "\n<pre><code>NSResolvedPerson thing;\nNSPersonEntity person = thing.GetPerson();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResolvedPerson.GetPersonCreated()
+  commentId: M:CRMScript.NetServer.NSResolvedPerson.GetPersonCreated()
+  id: 'GetPersonCreated()'
+  so.intellisense: NSResolvedPerson.GetPersonCreated
+  langs:
+  - crmscript
+  name: 'GetPersonCreated()'
+  nameWithType: NSResolvedPerson.GetPersonCreated()
+  fullName: CRMScript.NetServer.NSResolvedPerson.GetPersonCreated()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetPersonCreated()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Indicates if the resolved person was created or not.
+  example: 
+  - "\n<pre><code>NSResolvedPerson thing;\nBool personCreated = thing.GetPersonCreated();</code></pre>\n"
 - uid: CRMScript.NetServer.NSResolvedPerson.SetPerson(NSPersonEntity)
   commentId: M:CRMScript.NetServer.NSResolvedPerson.SetPerson(NSPersonEntity)
   id: 'SetPerson(NSPersonEntity)'
@@ -81,14 +82,14 @@ items:
   nameWithType: NSResolvedPerson.SetPerson(NSPersonEntity)
   fullName: CRMScript.NetServer.NSResolvedPerson.SetPerson(NSPersonEntity)
   type: Method
-  summary: "\nThe resolved NSPersonEntity instance.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPerson(NSPersonEntity person)
     parameters:
     - id: person
       type: CRMScript.NetServer.NSPersonEntity
-      description: 
+      description: The resolved NSPersonEntity instance.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -103,14 +104,14 @@ items:
   nameWithType: NSResolvedPerson.SetPersonCreated(Bool)
   fullName: CRMScript.NetServer.NSResolvedPerson.SetPersonCreated(Bool)
   type: Method
-  summary: "\nIndicates if the resolved person was created or not.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonCreated(Bool personCreated)
     parameters:
     - id: personCreated
       type: CRMScript.Global.Bool
-      description: 
+      description: Indicates if the resolved person was created or not.
     return:
       type: CRMScript.Global.Void
   example: 
