--- a/docs/api-reference/CRMScript.NetServer.NSResolvedUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSResolvedUser.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSResolvedUser.#ctor
   - CRMScript.NetServer.NSResolvedUser.GetPersonCreated()
   - CRMScript.NetServer.NSResolvedUser.GetUser()
-  - CRMScript.NetServer.NSResolvedUser.#ctor
   - CRMScript.NetServer.NSResolvedUser.SetPersonCreated(Bool)
   - CRMScript.NetServer.NSResolvedUser.SetUser(NSUser)
   name: NSResolvedUser
@@ -17,45 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSResolvedUser.GetPersonCreated()
-  commentId: M:CRMScript.NetServer.NSResolvedUser.GetPersonCreated()
-  id: 'GetPersonCreated()'
-  so.intellisense: NSResolvedUser.GetPersonCreated
-  langs:
-  - crmscript
-  name: 'GetPersonCreated()'
-  nameWithType: NSResolvedUser.GetPersonCreated()
-  fullName: CRMScript.NetServer.NSResolvedUser.GetPersonCreated()
-  type: Method
-  summary: "\nIndicates if the resolved person was created or not.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetPersonCreated()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSResolvedUser thing;\nBool personCreated = thing.GetPersonCreated();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResolvedUser.GetUser()
-  commentId: M:CRMScript.NetServer.NSResolvedUser.GetUser()
-  id: 'GetUser()'
-  so.intellisense: NSResolvedUser.GetUser
-  langs:
-  - crmscript
-  name: 'GetUser()'
-  nameWithType: NSResolvedUser.GetUser()
-  fullName: CRMScript.NetServer.NSResolvedUser.GetUser()
-  type: Method
-  summary: "\nThe resolved NSUser instance.\n"
-  remarks: 
-  syntax: 
-    content: NSUser GetUser()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSUser
-  example: 
-  - "\n<pre><code>NSResolvedUser thing;\nNSUser user = thing.GetUser();</code></pre>\n"
 - uid: CRMScript.NetServer.NSResolvedUser.#ctor
   commentId: M:CRMScript.NetServer.NSResolvedUser.#ctor
   id: '#ctor'
@@ -71,6 +32,46 @@ items:
   syntax: 
     content: NSResolvedUser
   example: 
+- uid: CRMScript.NetServer.NSResolvedUser.GetPersonCreated()
+  commentId: M:CRMScript.NetServer.NSResolvedUser.GetPersonCreated()
+  id: 'GetPersonCreated()'
+  so.intellisense: NSResolvedUser.GetPersonCreated
+  langs:
+  - crmscript
+  name: 'GetPersonCreated()'
+  nameWithType: NSResolvedUser.GetPersonCreated()
+  fullName: CRMScript.NetServer.NSResolvedUser.GetPersonCreated()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetPersonCreated()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Indicates if the resolved person was created or not.
+  example: 
+  - "\n<pre><code>NSResolvedUser thing;\nBool personCreated = thing.GetPersonCreated();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResolvedUser.GetUser()
+  commentId: M:CRMScript.NetServer.NSResolvedUser.GetUser()
+  id: 'GetUser()'
+  so.intellisense: NSResolvedUser.GetUser
+  langs:
+  - crmscript
+  name: 'GetUser()'
+  nameWithType: NSResolvedUser.GetUser()
+  fullName: CRMScript.NetServer.NSResolvedUser.GetUser()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSUser GetUser()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSUser
+      description: The resolved NSUser instance.
+  example: 
+  - "\n<pre><code>NSResolvedUser thing;\nNSUser user = thing.GetUser();</code></pre>\n"
 - uid: CRMScript.NetServer.NSResolvedUser.SetPersonCreated(Bool)
   commentId: M:CRMScript.NetServer.NSResolvedUser.SetPersonCreated(Bool)
   id: 'SetPersonCreated(Bool)'
@@ -81,14 +82,14 @@ items:
   nameWithType: NSResolvedUser.SetPersonCreated(Bool)
   fullName: CRMScript.NetServer.NSResolvedUser.SetPersonCreated(Bool)
   type: Method
-  summary: "\nIndicates if the resolved person was created or not.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonCreated(Bool personCreated)
     parameters:
     - id: personCreated
       type: CRMScript.Global.Bool
-      description: 
+      description: Indicates if the resolved person was created or not.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -103,14 +104,14 @@ items:
   nameWithType: NSResolvedUser.SetUser(NSUser)
   fullName: CRMScript.NetServer.NSResolvedUser.SetUser(NSUser)
   type: Method
-  summary: "\nThe resolved NSUser instance.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUser(NSUser user)
     parameters:
     - id: user
       type: CRMScript.NetServer.NSUser
-      description: 
+      description: The resolved NSUser instance.
     return:
       type: CRMScript.Global.Void
   example: 
