--- a/docs/api-reference/CRMScript.NetServer.NSResourceEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSResourceEntity.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSResourceEntity.#ctor
   - CRMScript.NetServer.NSResourceEntity.GetDeleted()
   - CRMScript.NetServer.NSResourceEntity.GetIsLocation()
   - CRMScript.NetServer.NSResourceEntity.GetLocationAddress()
@@ -13,7 +14,6 @@ items:
   - CRMScript.NetServer.NSResourceEntity.GetRank()
   - CRMScript.NetServer.NSResourceEntity.GetResourceId()
   - CRMScript.NetServer.NSResourceEntity.GetTooltip()
-  - CRMScript.NetServer.NSResourceEntity.#ctor
   - CRMScript.NetServer.NSResourceEntity.SetDeleted(Bool)
   - CRMScript.NetServer.NSResourceEntity.SetIsLocation(Bool)
   - CRMScript.NetServer.NSResourceEntity.SetLocationAddress(String)
@@ -27,146 +27,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSResourceEntity.GetDeleted()
-  commentId: M:CRMScript.NetServer.NSResourceEntity.GetDeleted()
-  id: 'GetDeleted()'
-  so.intellisense: NSResourceEntity.GetDeleted
-  langs:
-  - crmscript
-  name: 'GetDeleted()'
-  nameWithType: NSResourceEntity.GetDeleted()
-  fullName: CRMScript.NetServer.NSResourceEntity.GetDeleted()
-  type: Method
-  summary: "\nIf true, the resource is deleted.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDeleted()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSResourceEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResourceEntity.GetIsLocation()
-  commentId: M:CRMScript.NetServer.NSResourceEntity.GetIsLocation()
-  id: 'GetIsLocation()'
-  so.intellisense: NSResourceEntity.GetIsLocation
-  langs:
-  - crmscript
-  name: 'GetIsLocation()'
-  nameWithType: NSResourceEntity.GetIsLocation()
-  fullName: CRMScript.NetServer.NSResourceEntity.GetIsLocation()
-  type: Method
-  summary: "\nIf true the resource is a location\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsLocation()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSResourceEntity thing;\nBool isLocation = thing.GetIsLocation();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResourceEntity.GetLocationAddress()
-  commentId: M:CRMScript.NetServer.NSResourceEntity.GetLocationAddress()
-  id: 'GetLocationAddress()'
-  so.intellisense: NSResourceEntity.GetLocationAddress
-  langs:
-  - crmscript
-  name: 'GetLocationAddress()'
-  nameWithType: NSResourceEntity.GetLocationAddress()
-  fullName: CRMScript.NetServer.NSResourceEntity.GetLocationAddress()
-  type: Method
-  summary: "\nAddress of location, if this is a resource that is a location\n"
-  remarks: 
-  syntax: 
-    content: String GetLocationAddress()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSResourceEntity thing;\nString locationAddress = thing.GetLocationAddress();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResourceEntity.GetName()
-  commentId: M:CRMScript.NetServer.NSResourceEntity.GetName()
-  id: 'GetName()'
-  so.intellisense: NSResourceEntity.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSResourceEntity.GetName()
-  fullName: CRMScript.NetServer.NSResourceEntity.GetName()
-  type: Method
-  summary: "\nInitials, also login name, possibly database user name\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSResourceEntity thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResourceEntity.GetRank()
-  commentId: M:CRMScript.NetServer.NSResourceEntity.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSResourceEntity.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSResourceEntity.GetRank()
-  fullName: CRMScript.NetServer.NSResourceEntity.GetRank()
-  type: Method
-  summary: "\nRank order\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSResourceEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResourceEntity.GetResourceId()
-  commentId: M:CRMScript.NetServer.NSResourceEntity.GetResourceId()
-  id: 'GetResourceId()'
-  so.intellisense: NSResourceEntity.GetResourceId
-  langs:
-  - crmscript
-  name: 'GetResourceId()'
-  nameWithType: NSResourceEntity.GetResourceId()
-  fullName: CRMScript.NetServer.NSResourceEntity.GetResourceId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetResourceId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSResourceEntity thing;\nInteger resourceId = thing.GetResourceId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResourceEntity.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSResourceEntity.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSResourceEntity.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSResourceEntity.GetTooltip()
-  fullName: CRMScript.NetServer.NSResourceEntity.GetTooltip()
-  type: Method
-  summary: "\nTooltip or other description\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSResourceEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSResourceEntity.#ctor
   commentId: M:CRMScript.NetServer.NSResourceEntity.#ctor
   id: '#ctor'
@@ -182,6 +42,146 @@ items:
   syntax: 
     content: NSResourceEntity
   example: 
+- uid: CRMScript.NetServer.NSResourceEntity.GetDeleted()
+  commentId: M:CRMScript.NetServer.NSResourceEntity.GetDeleted()
+  id: 'GetDeleted()'
+  so.intellisense: NSResourceEntity.GetDeleted
+  langs:
+  - crmscript
+  name: 'GetDeleted()'
+  nameWithType: NSResourceEntity.GetDeleted()
+  fullName: CRMScript.NetServer.NSResourceEntity.GetDeleted()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetDeleted()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: If true, the resource is deleted.
+  example: 
+  - "\n<pre><code>NSResourceEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResourceEntity.GetIsLocation()
+  commentId: M:CRMScript.NetServer.NSResourceEntity.GetIsLocation()
+  id: 'GetIsLocation()'
+  so.intellisense: NSResourceEntity.GetIsLocation
+  langs:
+  - crmscript
+  name: 'GetIsLocation()'
+  nameWithType: NSResourceEntity.GetIsLocation()
+  fullName: CRMScript.NetServer.NSResourceEntity.GetIsLocation()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsLocation()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: If true the resource is a location
+  example: 
+  - "\n<pre><code>NSResourceEntity thing;\nBool isLocation = thing.GetIsLocation();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResourceEntity.GetLocationAddress()
+  commentId: M:CRMScript.NetServer.NSResourceEntity.GetLocationAddress()
+  id: 'GetLocationAddress()'
+  so.intellisense: NSResourceEntity.GetLocationAddress
+  langs:
+  - crmscript
+  name: 'GetLocationAddress()'
+  nameWithType: NSResourceEntity.GetLocationAddress()
+  fullName: CRMScript.NetServer.NSResourceEntity.GetLocationAddress()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLocationAddress()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Address of location, if this is a resource that is a location
+  example: 
+  - "\n<pre><code>NSResourceEntity thing;\nString locationAddress = thing.GetLocationAddress();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResourceEntity.GetName()
+  commentId: M:CRMScript.NetServer.NSResourceEntity.GetName()
+  id: 'GetName()'
+  so.intellisense: NSResourceEntity.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSResourceEntity.GetName()
+  fullName: CRMScript.NetServer.NSResourceEntity.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Initials, also login name, possibly database user name
+  example: 
+  - "\n<pre><code>NSResourceEntity thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResourceEntity.GetRank()
+  commentId: M:CRMScript.NetServer.NSResourceEntity.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSResourceEntity.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSResourceEntity.GetRank()
+  fullName: CRMScript.NetServer.NSResourceEntity.GetRank()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Rank order
+  example: 
+  - "\n<pre><code>NSResourceEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResourceEntity.GetResourceId()
+  commentId: M:CRMScript.NetServer.NSResourceEntity.GetResourceId()
+  id: 'GetResourceId()'
+  so.intellisense: NSResourceEntity.GetResourceId
+  langs:
+  - crmscript
+  name: 'GetResourceId()'
+  nameWithType: NSResourceEntity.GetResourceId()
+  fullName: CRMScript.NetServer.NSResourceEntity.GetResourceId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetResourceId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Primary key
+  example: 
+  - "\n<pre><code>NSResourceEntity thing;\nInteger resourceId = thing.GetResourceId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResourceEntity.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSResourceEntity.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSResourceEntity.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSResourceEntity.GetTooltip()
+  fullName: CRMScript.NetServer.NSResourceEntity.GetTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip or other description
+  example: 
+  - "\n<pre><code>NSResourceEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSResourceEntity.SetDeleted(Bool)
   commentId: M:CRMScript.NetServer.NSResourceEntity.SetDeleted(Bool)
   id: 'SetDeleted(Bool)'
@@ -192,14 +192,14 @@ items:
   nameWithType: NSResourceEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSResourceEntity.SetDeleted(Bool)
   type: Method
-  summary: "\nIf true, the resource is deleted.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
     parameters:
     - id: deleted
       type: CRMScript.Global.Bool
-      description: 
+      description: If true, the resource is deleted.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSResourceEntity.SetIsLocation(Bool)
   fullName: CRMScript.NetServer.NSResourceEntity.SetIsLocation(Bool)
   type: Method
-  summary: "\nIf true the resource is a location\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsLocation(Bool isLocation)
     parameters:
     - id: isLocation
       type: CRMScript.Global.Bool
-      description: 
+      description: If true the resource is a location
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSResourceEntity.SetLocationAddress(String)
   fullName: CRMScript.NetServer.NSResourceEntity.SetLocationAddress(String)
   type: Method
-  summary: "\nAddress of location, if this is a resource that is a location\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLocationAddress(String locationAddress)
     parameters:
     - id: locationAddress
       type: CRMScript.Global.String
-      description: 
+      description: Address of location, if this is a resource that is a location
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSResourceEntity.SetName(String)
   fullName: CRMScript.NetServer.NSResourceEntity.SetName(String)
   type: Method
-  summary: "\nInitials, also login name, possibly database user name\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Initials, also login name, possibly database user name
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSResourceEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSResourceEntity.SetRank(Integer)
   type: Method
-  summary: "\nRank order\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank order
     return:
       type: CRMScript.Global.Void
   example: 
@@ -302,14 +302,14 @@ items:
   nameWithType: NSResourceEntity.SetResourceId(Integer)
   fullName: CRMScript.NetServer.NSResourceEntity.SetResourceId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetResourceId(Integer resourceId)
     parameters:
     - id: resourceId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -324,14 +324,14 @@ items:
   nameWithType: NSResourceEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSResourceEntity.SetTooltip(String)
   type: Method
-  summary: "\nTooltip or other description\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip or other description
     return:
       type: CRMScript.Global.Void
   example: 
