--- a/docs/api-reference/CRMScript.NetServer.NSResourceOverride.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSResourceOverride.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSResourceOverride.#ctor
   - CRMScript.NetServer.NSResourceOverride.GetCulture()
   - CRMScript.NetServer.NSResourceOverride.GetIsActive()
   - CRMScript.NetServer.NSResourceOverride.GetResourceName()
   - CRMScript.NetServer.NSResourceOverride.GetResourceValue()
-  - CRMScript.NetServer.NSResourceOverride.#ctor
   - CRMScript.NetServer.NSResourceOverride.SetCulture(String)
   - CRMScript.NetServer.NSResourceOverride.SetIsActive(Bool)
   - CRMScript.NetServer.NSResourceOverride.SetResourceName(String)
@@ -21,86 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSResourceOverride.GetCulture()
-  commentId: M:CRMScript.NetServer.NSResourceOverride.GetCulture()
-  id: 'GetCulture()'
-  so.intellisense: NSResourceOverride.GetCulture
-  langs:
-  - crmscript
-  name: 'GetCulture()'
-  nameWithType: NSResourceOverride.GetCulture()
-  fullName: CRMScript.NetServer.NSResourceOverride.GetCulture()
-  type: Method
-  summary: "\n.NET-style culture code, such as NB-NO or EN-UK\n"
-  remarks: 
-  syntax: 
-    content: String GetCulture()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSResourceOverride thing;\nString culture = thing.GetCulture();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResourceOverride.GetIsActive()
-  commentId: M:CRMScript.NetServer.NSResourceOverride.GetIsActive()
-  id: 'GetIsActive()'
-  so.intellisense: NSResourceOverride.GetIsActive
-  langs:
-  - crmscript
-  name: 'GetIsActive()'
-  nameWithType: NSResourceOverride.GetIsActive()
-  fullName: CRMScript.NetServer.NSResourceOverride.GetIsActive()
-  type: Method
-  summary: "\nIs this override active\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsActive()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSResourceOverride thing;\nBool isActive = thing.GetIsActive();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResourceOverride.GetResourceName()
-  commentId: M:CRMScript.NetServer.NSResourceOverride.GetResourceName()
-  id: 'GetResourceName()'
-  so.intellisense: NSResourceOverride.GetResourceName
-  langs:
-  - crmscript
-  name: 'GetResourceName()'
-  nameWithType: NSResourceOverride.GetResourceName()
-  fullName: CRMScript.NetServer.NSResourceOverride.GetResourceName()
-  type: Method
-  summary: "\nThe name of the resource, without any brackets or braces* example: SR_CONTACT\n"
-  remarks: 
-  syntax: 
-    content: String GetResourceName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSResourceOverride thing;\nString resourceName = thing.GetResourceName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSResourceOverride.GetResourceValue()
-  commentId: M:CRMScript.NetServer.NSResourceOverride.GetResourceValue()
-  id: 'GetResourceValue()'
-  so.intellisense: NSResourceOverride.GetResourceValue
-  langs:
-  - crmscript
-  name: 'GetResourceValue()'
-  nameWithType: NSResourceOverride.GetResourceValue()
-  fullName: CRMScript.NetServer.NSResourceOverride.GetResourceValue()
-  type: Method
-  summary: "\nThe value of the resource in the given culture\n"
-  remarks: 
-  syntax: 
-    content: String GetResourceValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSResourceOverride thing;\nString resourceValue = thing.GetResourceValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSResourceOverride.#ctor
   commentId: M:CRMScript.NetServer.NSResourceOverride.#ctor
   id: '#ctor'
@@ -116,6 +36,86 @@ items:
   syntax: 
     content: NSResourceOverride
   example: 
+- uid: CRMScript.NetServer.NSResourceOverride.GetCulture()
+  commentId: M:CRMScript.NetServer.NSResourceOverride.GetCulture()
+  id: 'GetCulture()'
+  so.intellisense: NSResourceOverride.GetCulture
+  langs:
+  - crmscript
+  name: 'GetCulture()'
+  nameWithType: NSResourceOverride.GetCulture()
+  fullName: CRMScript.NetServer.NSResourceOverride.GetCulture()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetCulture()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: .NET-style culture code, such as NB-NO or EN-UK
+  example: 
+  - "\n<pre><code>NSResourceOverride thing;\nString culture = thing.GetCulture();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResourceOverride.GetIsActive()
+  commentId: M:CRMScript.NetServer.NSResourceOverride.GetIsActive()
+  id: 'GetIsActive()'
+  so.intellisense: NSResourceOverride.GetIsActive
+  langs:
+  - crmscript
+  name: 'GetIsActive()'
+  nameWithType: NSResourceOverride.GetIsActive()
+  fullName: CRMScript.NetServer.NSResourceOverride.GetIsActive()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsActive()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Is this override active
+  example: 
+  - "\n<pre><code>NSResourceOverride thing;\nBool isActive = thing.GetIsActive();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResourceOverride.GetResourceName()
+  commentId: M:CRMScript.NetServer.NSResourceOverride.GetResourceName()
+  id: 'GetResourceName()'
+  so.intellisense: NSResourceOverride.GetResourceName
+  langs:
+  - crmscript
+  name: 'GetResourceName()'
+  nameWithType: NSResourceOverride.GetResourceName()
+  fullName: CRMScript.NetServer.NSResourceOverride.GetResourceName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetResourceName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the resource, without any brackets or braces. For example, SR_CONTACT
+  example: 
+  - "\n<pre><code>NSResourceOverride thing;\nString resourceName = thing.GetResourceName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSResourceOverride.GetResourceValue()
+  commentId: M:CRMScript.NetServer.NSResourceOverride.GetResourceValue()
+  id: 'GetResourceValue()'
+  so.intellisense: NSResourceOverride.GetResourceValue
+  langs:
+  - crmscript
+  name: 'GetResourceValue()'
+  nameWithType: NSResourceOverride.GetResourceValue()
+  fullName: CRMScript.NetServer.NSResourceOverride.GetResourceValue()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetResourceValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The value of the resource in the given culture
+  example: 
+  - "\n<pre><code>NSResourceOverride thing;\nString resourceValue = thing.GetResourceValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSResourceOverride.SetCulture(String)
   commentId: M:CRMScript.NetServer.NSResourceOverride.SetCulture(String)
   id: 'SetCulture(String)'
@@ -126,15 +126,15 @@ items:
   nameWithType: NSResourceOverride.SetCulture(String)
   fullName: CRMScript.NetServer.NSResourceOverride.SetCulture(String)
   type: Method
-  summary: "\n.NET-style culture code, such as NB-NO or EN-UK\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCulture(String culture)
     parameters:
     - id: culture
       type: CRMScript.Global.String
-      description: 
-    return:
+      description: .NET-style culture code, such as NB-NO or EN-UK
+    return: 
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSResourceOverride thing;\nString culture;\nthing.SetCulture(culture);</code></pre>\n"
@@ -148,14 +148,14 @@ items:
   nameWithType: NSResourceOverride.SetIsActive(Bool)
   fullName: CRMScript.NetServer.NSResourceOverride.SetIsActive(Bool)
   type: Method
-  summary: "\nIs this override active\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsActive(Bool isActive)
     parameters:
     - id: isActive
       type: CRMScript.Global.Bool
-      description: 
+      description: Is this override active
     return:
       type: CRMScript.Global.Void
   example: 
@@ -170,14 +170,14 @@ items:
   nameWithType: NSResourceOverride.SetResourceName(String)
   fullName: CRMScript.NetServer.NSResourceOverride.SetResourceName(String)
   type: Method
-  summary: "\nThe name of the resource, without any brackets or braces* example: SR_CONTACT\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetResourceName(String resourceName)
     parameters:
     - id: resourceName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the resource, without any brackets or braces. For example, SR_CONTACT
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSResourceOverride.SetResourceValue(String)
   fullName: CRMScript.NetServer.NSResourceOverride.SetResourceValue(String)
   type: Method
-  summary: "\nThe value of the resource in the given culture\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetResourceValue(String resourceValue)
     parameters:
     - id: resourceValue
       type: CRMScript.Global.String
-      description: 
+      description: The value of the resource in the given culture
     return:
       type: CRMScript.Global.Void
   example: 
