--- a/docs/api-reference/CRMScript.NetServer.NSRecipientStatistics.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecipientStatistics.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSRecipientStatistics.#ctor
   - CRMScript.NetServer.NSRecipientStatistics.GetNoAddresses()
   - CRMScript.NetServer.NSRecipientStatistics.GetNoFaxOrEmails()
   - CRMScript.NetServer.NSRecipientStatistics.GetTotal()
   - CRMScript.NetServer.NSRecipientStatistics.GetValidEmailAddresses()
   - CRMScript.NetServer.NSRecipientStatistics.GetValidFaxNumbers()
   - CRMScript.NetServer.NSRecipientStatistics.GetValidPostalAddresses()
-  - CRMScript.NetServer.NSRecipientStatistics.#ctor
   - CRMScript.NetServer.NSRecipientStatistics.SetNoAddresses(Integer)
   - CRMScript.NetServer.NSRecipientStatistics.SetNoFaxOrEmails(Integer)
   - CRMScript.NetServer.NSRecipientStatistics.SetTotal(Integer)
@@ -24,114 +24,6 @@ items:
   fullName: CRMScript.NetServer.NSRecipientStatistics
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSRecipientStatistics.GetNoAddresses()
-  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetNoAddresses()
-  id: 'GetNoAddresses()'
-  so.intellisense: NSRecipientStatistics.GetNoAddresses
-  langs:
-  - crmscript
-  name: 'GetNoAddresses()'
-  nameWithType: NSRecipientStatistics.GetNoAddresses()
-  fullName: CRMScript.NetServer.NSRecipientStatistics.GetNoAddresses()
-  type: Method
-  summary: "\nNumber of members with an invalid address.\n"
-  remarks: 
-  syntax: 
-    content: GetNoAddresses()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecipientStatistics.GetNoFaxOrEmails()
-  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetNoFaxOrEmails()
-  id: 'GetNoFaxOrEmails()'
-  so.intellisense: NSRecipientStatistics.GetNoFaxOrEmails
-  langs:
-  - crmscript
-  name: 'GetNoFaxOrEmails()'
-  nameWithType: NSRecipientStatistics.GetNoFaxOrEmails()
-  fullName: CRMScript.NetServer.NSRecipientStatistics.GetNoFaxOrEmails()
-  type: Method
-  summary: "\nNumber of members with no fax or email address.\n"
-  remarks: 
-  syntax: 
-    content: GetNoFaxOrEmails()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecipientStatistics.GetTotal()
-  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetTotal()
-  id: 'GetTotal()'
-  so.intellisense: NSRecipientStatistics.GetTotal
-  langs:
-  - crmscript
-  name: 'GetTotal()'
-  nameWithType: NSRecipientStatistics.GetTotal()
-  fullName: CRMScript.NetServer.NSRecipientStatistics.GetTotal()
-  type: Method
-  summary: "\nTotal number of members.\n"
-  remarks: 
-  syntax: 
-    content: GetTotal()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecipientStatistics.GetValidEmailAddresses()
-  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetValidEmailAddresses()
-  id: 'GetValidEmailAddresses()'
-  so.intellisense: NSRecipientStatistics.GetValidEmailAddresses
-  langs:
-  - crmscript
-  name: 'GetValidEmailAddresses()'
-  nameWithType: NSRecipientStatistics.GetValidEmailAddresses()
-  fullName: CRMScript.NetServer.NSRecipientStatistics.GetValidEmailAddresses()
-  type: Method
-  summary: "\nNumber of members with a valid email address.\n"
-  remarks: 
-  syntax: 
-    content: GetValidEmailAddresses()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecipientStatistics.GetValidFaxNumbers()
-  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetValidFaxNumbers()
-  id: 'GetValidFaxNumbers()'
-  so.intellisense: NSRecipientStatistics.GetValidFaxNumbers
-  langs:
-  - crmscript
-  name: 'GetValidFaxNumbers()'
-  nameWithType: NSRecipientStatistics.GetValidFaxNumbers()
-  fullName: CRMScript.NetServer.NSRecipientStatistics.GetValidFaxNumbers()
-  type: Method
-  summary: "\nNumber of members with a valid fax number.\n"
-  remarks: 
-  syntax: 
-    content: GetValidFaxNumbers()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSRecipientStatistics.GetValidPostalAddresses()
-  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetValidPostalAddresses()
-  id: 'GetValidPostalAddresses()'
-  so.intellisense: NSRecipientStatistics.GetValidPostalAddresses
-  langs:
-  - crmscript
-  name: 'GetValidPostalAddresses()'
-  nameWithType: NSRecipientStatistics.GetValidPostalAddresses()
-  fullName: CRMScript.NetServer.NSRecipientStatistics.GetValidPostalAddresses()
-  type: Method
-  summary: "\nNumber of members with a valid postal address.\n"
-  remarks: 
-  syntax: 
-    content: GetValidPostalAddresses()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecipientStatistics.#ctor
   commentId: M:CRMScript.NetServer.NSRecipientStatistics.#ctor
@@ -148,6 +40,114 @@ items:
   syntax: 
     content: NSRecipientStatistics
   example: 
+- uid: CRMScript.NetServer.NSRecipientStatistics.GetNoAddresses()
+  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetNoAddresses()
+  id: 'GetNoAddresses()'
+  so.intellisense: NSRecipientStatistics.GetNoAddresses
+  langs:
+  - crmscript
+  name: 'GetNoAddresses()'
+  nameWithType: NSRecipientStatistics.GetNoAddresses()
+  fullName: CRMScript.NetServer.NSRecipientStatistics.GetNoAddresses()
+  type: Method
+  summary: "\nNumber of members with an invalid address.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetNoAddresses()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecipientStatistics.GetNoFaxOrEmails()
+  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetNoFaxOrEmails()
+  id: 'GetNoFaxOrEmails()'
+  so.intellisense: NSRecipientStatistics.GetNoFaxOrEmails
+  langs:
+  - crmscript
+  name: 'GetNoFaxOrEmails()'
+  nameWithType: NSRecipientStatistics.GetNoFaxOrEmails()
+  fullName: CRMScript.NetServer.NSRecipientStatistics.GetNoFaxOrEmails()
+  type: Method
+  summary: "\nNumber of members with no fax or email address.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetNoFaxOrEmails()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecipientStatistics.GetTotal()
+  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetTotal()
+  id: 'GetTotal()'
+  so.intellisense: NSRecipientStatistics.GetTotal
+  langs:
+  - crmscript
+  name: 'GetTotal()'
+  nameWithType: NSRecipientStatistics.GetTotal()
+  fullName: CRMScript.NetServer.NSRecipientStatistics.GetTotal()
+  type: Method
+  summary: "\nTotal number of members.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetTotal()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecipientStatistics.GetValidEmailAddresses()
+  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetValidEmailAddresses()
+  id: 'GetValidEmailAddresses()'
+  so.intellisense: NSRecipientStatistics.GetValidEmailAddresses
+  langs:
+  - crmscript
+  name: 'GetValidEmailAddresses()'
+  nameWithType: NSRecipientStatistics.GetValidEmailAddresses()
+  fullName: CRMScript.NetServer.NSRecipientStatistics.GetValidEmailAddresses()
+  type: Method
+  summary: "\nNumber of members with a valid email address.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetValidEmailAddresses()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecipientStatistics.GetValidFaxNumbers()
+  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetValidFaxNumbers()
+  id: 'GetValidFaxNumbers()'
+  so.intellisense: NSRecipientStatistics.GetValidFaxNumbers
+  langs:
+  - crmscript
+  name: 'GetValidFaxNumbers()'
+  nameWithType: NSRecipientStatistics.GetValidFaxNumbers()
+  fullName: CRMScript.NetServer.NSRecipientStatistics.GetValidFaxNumbers()
+  type: Method
+  summary: "\nNumber of members with a valid fax number.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetValidFaxNumbers()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSRecipientStatistics.GetValidPostalAddresses()
+  commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetValidPostalAddresses()
+  id: 'GetValidPostalAddresses()'
+  so.intellisense: NSRecipientStatistics.GetValidPostalAddresses
+  langs:
+  - crmscript
+  name: 'GetValidPostalAddresses()'
+  nameWithType: NSRecipientStatistics.GetValidPostalAddresses()
+  fullName: CRMScript.NetServer.NSRecipientStatistics.GetValidPostalAddresses()
+  type: Method
+  summary: "\nNumber of members with a valid postal address.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetValidPostalAddresses()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
 - uid: CRMScript.NetServer.NSRecipientStatistics.SetNoAddresses(Integer)
   commentId: M:CRMScript.NetServer.NSRecipientStatistics.SetNoAddresses(Integer)
   id: 'SetNoAddresses(Integer)'
@@ -161,9 +161,9 @@ items:
   summary: "\nNumber of members with an invalid address.\n"
   remarks: 
   syntax: 
-    content: Void SetNoAddresses(Integer p_0)
+    content: Void SetNoAddresses(Integer num)
     parameters:
-    - id: p_0
+    - id: num
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -182,9 +182,9 @@ items:
   summary: "\nNumber of members with no fax or email address.\n"
   remarks: 
   syntax: 
-    content: Void SetNoFaxOrEmails(Integer p_0)
+    content: Void SetNoFaxOrEmails(Integer num)
     parameters:
-    - id: p_0
+    - id: num
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -203,9 +203,9 @@ items:
   summary: "\nTotal number of members.\n"
   remarks: 
   syntax: 
-    content: Void SetTotal(Integer p_0)
+    content: Void SetTotal(Integer num)
     parameters:
-    - id: p_0
+    - id: num
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -224,9 +224,9 @@ items:
   summary: "\nNumber of members with a valid email address.\n"
   remarks: 
   syntax: 
-    content: Void SetValidEmailAddresses(Integer p_0)
+    content: Void SetValidEmailAddresses(Integer num)
     parameters:
-    - id: p_0
+    - id: num
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -245,9 +245,9 @@ items:
   summary: "\nNumber of members with a valid fax number.\n"
   remarks: 
   syntax: 
-    content: Void SetValidFaxNumbers(Integer p_0)
+    content: Void SetValidFaxNumbers(Integer num)
     parameters:
-    - id: p_0
+    - id: num
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -266,9 +266,9 @@ items:
   summary: "\nNumber of members with a valid postal address.\n"
   remarks: 
   syntax: 
-    content: Void SetValidPostalAddresses(Integer p_0)
+    content: Void SetValidPostalAddresses(Integer num)
     parameters:
-    - id: p_0
+    - id: num
       type: CRMScript.Global.Integer
       description: 
     return:
