--- a/docs/api-reference/CRMScript.NetServer.NSRedLetterDetails.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRedLetterDetails.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSRedLetterDetails.#ctor
   - CRMScript.NetServer.NSRedLetterDetails.GetOtherCountryDayTexts()
   - CRMScript.NetServer.NSRedLetterDetails.GetOwnCountryDayTexts()
-  - CRMScript.NetServer.NSRedLetterDetails.#ctor
   - CRMScript.NetServer.NSRedLetterDetails.SetOtherCountryDayTexts(String[])
   - CRMScript.NetServer.NSRedLetterDetails.SetOwnCountryDayTexts(String[])
   name: NSRedLetterDetails
@@ -17,46 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSRedLetterDetails.GetOtherCountryDayTexts()
-  commentId: M:CRMScript.NetServer.NSRedLetterDetails.GetOtherCountryDayTexts()
-  id: 'GetOtherCountryDayTexts()'
-  so.intellisense: NSRedLetterDetails.GetOtherCountryDayTexts
-  langs:
-  - crmscript
-  name: 'GetOtherCountryDayTexts()'
-  nameWithType: NSRedLetterDetails.GetOtherCountryDayTexts()
-  fullName: CRMScript.NetServer.NSRedLetterDetails.GetOtherCountryDayTexts()
-  type: Method
-  summary: "\nRed letter day texts for other countries than the associates' own country<p></p>\n<strong>Returns:</strong>String[]<p></p>\n<pre><code>NSRedLetterDetails thing;\nString[] otherCountryDayTexts = thing.GetOtherCountryDayTexts();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String[] GetOtherCountryDayTexts()
-    parameters: []
-    return:
-      type: CRMScript.Global.String[]
-      description:
-  example: 
-  - "\n<pre><code>NSRedLetterDetails thing;\nString[] otherCountryDayTexts = thing.GetOtherCountryDayTexts();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRedLetterDetails.GetOwnCountryDayTexts()
-  commentId: M:CRMScript.NetServer.NSRedLetterDetails.GetOwnCountryDayTexts()
-  id: 'GetOwnCountryDayTexts()'
-  so.intellisense: NSRedLetterDetails.GetOwnCountryDayTexts
-  langs:
-  - crmscript
-  name: 'GetOwnCountryDayTexts()'
-  nameWithType: NSRedLetterDetails.GetOwnCountryDayTexts()
-  fullName: CRMScript.NetServer.NSRedLetterDetails.GetOwnCountryDayTexts()
-  type: Method
-  summary: "\nArray* possibly empty* of the texts related to one day in the redletter system.<p></p>\n<strong>Returns:</strong>String[]<p></p>\n<pre><code>NSRedLetterDetails thing;\nString[] ownCountryDayTexts = thing.GetOwnCountryDayTexts();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String[] GetOwnCountryDayTexts()
-    parameters: []
-    return:
-      type: CRMScript.Global.String[]
-      description:
-  example: 
-  - "\n<pre><code>NSRedLetterDetails thing;\nString[] ownCountryDayTexts = thing.GetOwnCountryDayTexts();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRedLetterDetails.#ctor
   commentId: M:CRMScript.NetServer.NSRedLetterDetails.#ctor
   id: '#ctor'
@@ -72,6 +32,46 @@ items:
   syntax: 
     content: NSRedLetterDetails
   example: 
+- uid: CRMScript.NetServer.NSRedLetterDetails.GetOtherCountryDayTexts()
+  commentId: M:CRMScript.NetServer.NSRedLetterDetails.GetOtherCountryDayTexts()
+  id: 'GetOtherCountryDayTexts()'
+  so.intellisense: NSRedLetterDetails.GetOtherCountryDayTexts
+  langs:
+  - crmscript
+  name: 'GetOtherCountryDayTexts()'
+  nameWithType: NSRedLetterDetails.GetOtherCountryDayTexts()
+  fullName: CRMScript.NetServer.NSRedLetterDetails.GetOtherCountryDayTexts()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String[] GetOtherCountryDayTexts()
+    parameters: []
+    return:
+      type: CRMScript.Global.String[]
+      description: Red-letter day texts for other countries than the associates' own country
+  example: 
+  - "\n<pre><code>NSRedLetterDetails thing;\nString[] otherCountryDayTexts = thing.GetOtherCountryDayTexts();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRedLetterDetails.GetOwnCountryDayTexts()
+  commentId: M:CRMScript.NetServer.NSRedLetterDetails.GetOwnCountryDayTexts()
+  id: 'GetOwnCountryDayTexts()'
+  so.intellisense: NSRedLetterDetails.GetOwnCountryDayTexts
+  langs:
+  - crmscript
+  name: 'GetOwnCountryDayTexts()'
+  nameWithType: NSRedLetterDetails.GetOwnCountryDayTexts()
+  fullName: CRMScript.NetServer.NSRedLetterDetails.GetOwnCountryDayTexts()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String[] GetOwnCountryDayTexts()
+    parameters: []
+    return:
+      type: CRMScript.Global.String[]
+      description: Array, possibly empty, of the texts related to one day in the red-letter system.
+  example: 
+  - "\n<pre><code>NSRedLetterDetails thing;\nString[] ownCountryDayTexts = thing.GetOwnCountryDayTexts();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRedLetterDetails.SetOtherCountryDayTexts(String[])
   commentId: M:CRMScript.NetServer.NSRedLetterDetails.SetOtherCountryDayTexts(String[])
   id: 'SetOtherCountryDayTexts(String[])'
@@ -82,14 +82,14 @@ items:
   nameWithType: NSRedLetterDetails.SetOtherCountryDayTexts(String[])
   fullName: CRMScript.NetServer.NSRedLetterDetails.SetOtherCountryDayTexts(String[])
   type: Method
-  summary: "\nRed letter day texts for other countries than the associates' own country\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOtherCountryDayTexts(String[] otherCountryDayTexts)
     parameters:
     - id: otherCountryDayTexts
       type: CRMScript.Global.String[]
-      description: 
+      description:  Red-letter day texts for other countries than the associates' own country
     return:
       type: CRMScript.Global.Void
   example: 
@@ -104,14 +104,14 @@ items:
   nameWithType: NSRedLetterDetails.SetOwnCountryDayTexts(String[])
   fullName: CRMScript.NetServer.NSRedLetterDetails.SetOwnCountryDayTexts(String[])
   type: Method
-  summary: "\nArray* possibly empty* of the texts related to one day in the redletter system.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOwnCountryDayTexts(String[] ownCountryDayTexts)
     parameters:
     - id: ownCountryDayTexts
       type: CRMScript.Global.String[]
-      description: 
+      description:  Array, possibly empty, of the texts related to one day in the red-letter system.
     return:
       type: CRMScript.Global.Void
   example: 
