--- a/docs/api-reference/CRMScript.NetServer.NSRedLetterInformationListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRedLetterInformationListItem.yml
@@ -6,77 +6,19 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSRedLetterInformationListItem.#ctor
   - CRMScript.NetServer.NSRedLetterInformationListItem.GetDate()
   - CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterDetails()
   - CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterInformation()
-  - CRMScript.NetServer.NSRedLetterInformationListItem.#ctor
-  - CRMScript.NetServer.NSRedLetterInformationListItem.SetDate()
-  - CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterDetails()
-  - CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterInformation()
+  - CRMScript.NetServer.NSRedLetterInformationListItem.SetDate(DateTime)
+  - CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterDetails(NSRedLetterDetails)
+  - CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterInformation(NSRedLetterSummary)
   name: NSRedLetterInformationListItem
   nameWithType: NSRedLetterInformationListItem
   fullName: CRMScript.NetServer.NSRedLetterInformationListItem
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSRedLetterInformationListItem.GetDate()
-  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.GetDate()
-  id: 'GetDate()'
-  so.intellisense: NSRedLetterInformationListItem.GetDate
-  langs:
-  - crmscript
-  name: 'GetDate()'
-  nameWithType: NSRedLetterInformationListItem.GetDate()
-  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.GetDate()
-  type: Method
-  summary: "\nDate that this item is valid for; there is exactly one item per date, ordered by date.\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetDate()
-    parameters: []
-    return:
-      type: CRMScript.Global.DateTime
-      description:
-  example: 
-  - "\n<pre><code>NSRedLetterInformationListItem thing;\nDateTime date = thing.GetDate();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterDetails()
-  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterDetails()
-  id: 'GetRedLetterDetails()'
-  so.intellisense: NSRedLetterInformationListItem.GetRedLetterDetails
-  langs:
-  - crmscript
-  name: 'GetRedLetterDetails()'
-  nameWithType: NSRedLetterInformationListItem.GetRedLetterDetails()
-  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterDetails()
-  type: Method
-  summary: "\nRed letter day text details, all the texts related to the given day.\n"
-  remarks: 
-  syntax: 
-    content: NSRedLetterDetails GetRedLetterDetails()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSRedLetterDetails
-  example: 
-  - "\n<pre><code>NSRedLetterInformationListItem thing;\nNSRedLetterDetails redLetterDetails = thing.GetRedLetterDetails();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterInformation()
-  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterInformation()
-  id: 'GetRedLetterInformation()'
-  so.intellisense: NSRedLetterInformationListItem.GetRedLetterInformation
-  langs:
-  - crmscript
-  name: 'GetRedLetterInformation()'
-  nameWithType: NSRedLetterInformationListItem.GetRedLetterInformation()
-  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterInformation()
-  type: Method
-  summary: "\nSummary of redletter day information* holiday in own country, and in other countries known to the system.\n"
-  remarks: 
-  syntax: 
-    content: NSRedLetterSummary GetRedLetterInformation()
-    parameters: []
-    return:
-      type: CRMScript.NetServer.NSRedLetterSummary
-  example: 
-  - "\n<pre><code>NSRedLetterInformationListItem thing;\nNSRedLetterSummary redLetterInformation = thing.GetRedLetterInformation();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRedLetterInformationListItem.#ctor
   commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.#ctor
   id: '#ctor'
@@ -92,55 +34,130 @@ items:
   syntax: 
     content: NSRedLetterInformationListItem
   example: 
-- uid: CRMScript.NetServer.NSRedLetterInformationListItem.SetDate()
-  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.SetDate()
-  id: 'SetDate()'
+- uid: CRMScript.NetServer.NSRedLetterInformationListItem.GetDate()
+  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.GetDate()
+  id: 'GetDate()'
+  so.intellisense: NSRedLetterInformationListItem.GetDate
+  langs:
+  - crmscript
+  name: 'GetDate()'
+  nameWithType: NSRedLetterInformationListItem.GetDate()
+  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.GetDate()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: DateTime GetDate()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description: Date that this item is valid for; there is exactly one item per date, ordered by date.
+  example: 
+  - "\n<pre><code>NSRedLetterInformationListItem thing;\nDateTime date = thing.GetDate();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterDetails()
+  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterDetails()
+  id: 'GetRedLetterDetails()'
+  so.intellisense: NSRedLetterInformationListItem.GetRedLetterDetails
+  langs:
+  - crmscript
+  name: 'GetRedLetterDetails()'
+  nameWithType: NSRedLetterInformationListItem.GetRedLetterDetails()
+  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterDetails()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSRedLetterDetails GetRedLetterDetails()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSRedLetterDetails
+      describing: Red-letter day text details, all the texts related to the given day.
+  example: 
+  - "\n<pre><code>NSRedLetterInformationListItem thing;\nNSRedLetterDetails redLetterDetails = thing.GetRedLetterDetails();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterInformation()
+  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterInformation()
+  id: 'GetRedLetterInformation()'
+  so.intellisense: NSRedLetterInformationListItem.GetRedLetterInformation
+  langs:
+  - crmscript
+  name: 'GetRedLetterInformation()'
+  nameWithType: NSRedLetterInformationListItem.GetRedLetterInformation()
+  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterInformation()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSRedLetterSummary GetRedLetterInformation()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSRedLetterSummary
+      description: Summary of red-letter day information* holiday in own country, and in other countries known to the system.
+  example: 
+  - "\n<pre><code>NSRedLetterInformationListItem thing;\nNSRedLetterSummary redLetterInformation = thing.GetRedLetterInformation();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRedLetterInformationListItem.SetDate(DateTime)
+  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.SetDate(DateTime)
+  id: 'SetDate(DateTime)'
   so.intellisense: NSRedLetterInformationListItem.SetDate
   langs:
   - crmscript
-  name: 'SetDate()'
-  nameWithType: NSRedLetterInformationListItem.SetDate()
-  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.SetDate()
+  name: 'SetDate(DateTime)'
+  nameWithType: NSRedLetterInformationListItem.SetDate(DateTime)
+  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.SetDate(DateTime)
   type: Method
-  summary: "\nDate that this item is valid for; there is exactly one item per date, ordered by date.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDate(DateTime date)
     parameters:
+    - id: date
+      type: CRMScript.Global.DateTime
+      description: Date that this item is valid for; there is exactly one item per date, ordered by date.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSRedLetterInformationListItem thing;\nDateTime date;\nthing.SetDate(date);</code></pre>\n"
-- uid: CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterDetails()
-  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterDetails()
-  id: 'SetRedLetterDetails()'
+- uid: CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterDetails(NSRedLetterDetails)
+  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterDetails(NSRedLetterDetails)
+  id: 'SetRedLetterDetails(NSRedLetterDetails)'
   so.intellisense: NSRedLetterInformationListItem.SetRedLetterDetails
   langs:
   - crmscript
-  name: 'SetRedLetterDetails()'
-  nameWithType: NSRedLetterInformationListItem.SetRedLetterDetails()
-  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterDetails()
+  name: 'SetRedLetterDetails(NSRedLetterDetails)'
+  nameWithType: NSRedLetterInformationListItem.SetRedLetterDetails(NSRedLetterDetails)
+  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterDetails(NSRedLetterDetails)
   type: Method
-  summary: "\nRed letter day text details, all the texts related to the given day.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRedLetterDetails(NSRedLetterDetails redLetterDetails)
     parameters:
+    - id: redLetterDetails
+      type: CRMScript.NetServer.NSRedLetterDetails
+      description: Red-letter day text details, all the texts related to the given day.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSRedLetterInformationListItem thing;\nNSRedLetterDetails redLetterDetails;\nthing.SetRedLetterDetails(redLetterDetails);</code></pre>\n"
-- uid: CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterInformation()
-  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterInformation()
-  id: 'SetRedLetterInformation()'
+- uid: CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterInformation(NSRedLetterSummary)
+  commentId: M:CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterInformation(NSRedLetterSummary)
+  id: 'SetRedLetterInformation(NSRedLetterSummary)'
   so.intellisense: NSRedLetterInformationListItem.SetRedLetterInformation
   langs:
   - crmscript
-  name: 'SetRedLetterInformation()'
-  nameWithType: NSRedLetterInformationListItem.SetRedLetterInformation()
-  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterInformation()
+  name: 'SetRedLetterInformation(NSRedLetterSummary)'
+  nameWithType: NSRedLetterInformationListItem.SetRedLetterInformation(NSRedLetterSummary)
+  fullName: CRMScript.NetServer.NSRedLetterInformationListItem.SetRedLetterInformation(NSRedLetterSummary)
   type: Method
-  summary: "\nSummary of redletter day information* holiday in own country, and in other countries known to the system.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRedLetterInformation(NSRedLetterSummary redLetterInformation)
     parameters:
+    - id: redLetterInformation
+      type: CRMScript.NetServer.NSRedLetterSummary
+      description: Summary of red-letter day information, holiday in own country, and in other countries known to the system.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSRedLetterInformationListItem thing;\nNSRedLetterSummary redLetterInformation;\nthing.SetRedLetterInformation(redLetterInformation);</code></pre>\n"
 references:
