--- a/docs/api-reference/CRMScript.NetServer.NSRedLetterSummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRedLetterSummary.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSRedLetterSummary.#ctor
   - CRMScript.NetServer.NSRedLetterSummary.GetIsOtherCountryHoliday()
   - CRMScript.NetServer.NSRedLetterSummary.GetIsOwnCountryHoliday()
-  - CRMScript.NetServer.NSRedLetterSummary.#ctor
   - CRMScript.NetServer.NSRedLetterSummary.SetIsOtherCountryHoliday(Bool)
   - CRMScript.NetServer.NSRedLetterSummary.SetIsOwnCountryHoliday(Bool)
   name: NSRedLetterSummary
@@ -17,46 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSRedLetterSummary.GetIsOtherCountryHoliday()
-  commentId: M:CRMScript.NetServer.NSRedLetterSummary.GetIsOtherCountryHoliday()
-  id: 'GetIsOtherCountryHoliday()'
-  so.intellisense: NSRedLetterSummary.GetIsOtherCountryHoliday
-  langs:
-  - crmscript
-  name: 'GetIsOtherCountryHoliday()'
-  nameWithType: NSRedLetterSummary.GetIsOtherCountryHoliday()
-  fullName: CRMScript.NetServer.NSRedLetterSummary.GetIsOtherCountryHoliday()
-  type: Method
-  summary: "\nIf true, this day is a holiday in at least one of the countries that has defined associates in the system, but not in the country of the associate whose diary is being scanned.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsOtherCountryHoliday()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSRedLetterSummary thing;\nBool isOtherCountryHoliday = thing.GetIsOtherCountryHoliday();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRedLetterSummary.GetIsOwnCountryHoliday()
-  commentId: M:CRMScript.NetServer.NSRedLetterSummary.GetIsOwnCountryHoliday()
-  id: 'GetIsOwnCountryHoliday()'
-  so.intellisense: NSRedLetterSummary.GetIsOwnCountryHoliday
-  langs:
-  - crmscript
-  name: 'GetIsOwnCountryHoliday()'
-  nameWithType: NSRedLetterSummary.GetIsOwnCountryHoliday()
-  fullName: CRMScript.NetServer.NSRedLetterSummary.GetIsOwnCountryHoliday()
-  type: Method
-  summary: "\nIf true, this day is a holiday in the country of the given associate.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsOwnCountryHoliday()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSRedLetterSummary thing;\nBool isOwnCountryHoliday = thing.GetIsOwnCountryHoliday();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRedLetterSummary.#ctor
   commentId: M:CRMScript.NetServer.NSRedLetterSummary.#ctor
   id: '#ctor'
@@ -72,6 +32,46 @@ items:
   syntax: 
     content: NSRedLetterSummary
   example: 
+- uid: CRMScript.NetServer.NSRedLetterSummary.GetIsOtherCountryHoliday()
+  commentId: M:CRMScript.NetServer.NSRedLetterSummary.GetIsOtherCountryHoliday()
+  id: 'GetIsOtherCountryHoliday()'
+  so.intellisense: NSRedLetterSummary.GetIsOtherCountryHoliday
+  langs:
+  - crmscript
+  name: 'GetIsOtherCountryHoliday()'
+  nameWithType: NSRedLetterSummary.GetIsOtherCountryHoliday()
+  fullName: CRMScript.NetServer.NSRedLetterSummary.GetIsOtherCountryHoliday()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsOtherCountryHoliday()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: If true, this day is a holiday in at least one of the countries that has defined associates in the system, but not in the country of the associate whose diary is being scanned.
+  example: 
+  - "\n<pre><code>NSRedLetterSummary thing;\nBool isOtherCountryHoliday = thing.GetIsOtherCountryHoliday();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRedLetterSummary.GetIsOwnCountryHoliday()
+  commentId: M:CRMScript.NetServer.NSRedLetterSummary.GetIsOwnCountryHoliday()
+  id: 'GetIsOwnCountryHoliday()'
+  so.intellisense: NSRedLetterSummary.GetIsOwnCountryHoliday
+  langs:
+  - crmscript
+  name: 'GetIsOwnCountryHoliday()'
+  nameWithType: NSRedLetterSummary.GetIsOwnCountryHoliday()
+  fullName: CRMScript.NetServer.NSRedLetterSummary.GetIsOwnCountryHoliday()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetIsOwnCountryHoliday()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: If true, this day is a holiday in the country of the given associate.
+  example: 
+  - "\n<pre><code>NSRedLetterSummary thing;\nBool isOwnCountryHoliday = thing.GetIsOwnCountryHoliday();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRedLetterSummary.SetIsOtherCountryHoliday(Bool)
   commentId: M:CRMScript.NetServer.NSRedLetterSummary.SetIsOtherCountryHoliday(Bool)
   id: 'SetIsOtherCountryHoliday(Bool)'
@@ -82,14 +82,14 @@ items:
   nameWithType: NSRedLetterSummary.SetIsOtherCountryHoliday(Bool)
   fullName: CRMScript.NetServer.NSRedLetterSummary.SetIsOtherCountryHoliday(Bool)
   type: Method
-  summary: "\nIf true, this day is a holiday in at least one of the countries that has defined associates in the system, but not in the country of the associate whose diary is being scanned.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsOtherCountryHoliday(Bool isOtherCountryHoliday)
     parameters:
     - id: isOtherCountryHoliday
       type: CRMScript.Global.Bool
-      description: 
+      description: If true, this day is a holiday in at least one of the countries that has defined associates in the system, but not in the country of the associate whose diary is being scanned.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -104,14 +104,14 @@ items:
   nameWithType: NSRedLetterSummary.SetIsOwnCountryHoliday(Bool)
   fullName: CRMScript.NetServer.NSRedLetterSummary.SetIsOwnCountryHoliday(Bool)
   type: Method
-  summary: "\nIf true, this day is a holiday in the country of the given associate.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsOwnCountryHoliday(Bool isOwnCountryHoliday)
     parameters:
     - id: isOwnCountryHoliday
       type: CRMScript.Global.Bool
-      description: 
+      description:  If true, this day is a holiday in the country of the given associate.
     return:
       type: CRMScript.Global.Void
   example: 
