--- a/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSRelationDefinitionEntity.#ctor
   - CRMScript.NetServer.NSRelationDefinitionEntity.GetDeleted()
   - CRMScript.NetServer.NSRelationDefinitionEntity.GetDestination()
   - CRMScript.NetServer.NSRelationDefinitionEntity.GetName()
@@ -14,7 +15,6 @@ items:
   - CRMScript.NetServer.NSRelationDefinitionEntity.GetReldefId()
   - CRMScript.NetServer.NSRelationDefinitionEntity.GetSource()
   - CRMScript.NetServer.NSRelationDefinitionEntity.GetTooltip()
-  - CRMScript.NetServer.NSRelationDefinitionEntity.#ctor
   - CRMScript.NetServer.NSRelationDefinitionEntity.SetDeleted(Bool)
   - CRMScript.NetServer.NSRelationDefinitionEntity.SetDestination(Integer)
   - CRMScript.NetServer.NSRelationDefinitionEntity.SetName(String)
@@ -29,166 +29,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetDeleted()
-  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetDeleted()
-  id: 'GetDeleted()'
-  so.intellisense: NSRelationDefinitionEntity.GetDeleted
-  langs:
-  - crmscript
-  name: 'GetDeleted()'
-  nameWithType: NSRelationDefinitionEntity.GetDeleted()
-  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetDeleted()
-  type: Method
-  summary: "\nTrue if deleted\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDeleted()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSRelationDefinitionEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetDestination()
-  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetDestination()
-  id: 'GetDestination()'
-  so.intellisense: NSRelationDefinitionEntity.GetDestination
-  langs:
-  - crmscript
-  name: 'GetDestination()'
-  nameWithType: NSRelationDefinitionEntity.GetDestination()
-  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetDestination()
-  type: Method
-  summary: "\nThe destination of the relation<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Contact</li><li>Enum: 2 = Person</li><li>Enum: 3 = Both</li></ul><pre><code>NSRelationDefinitionEntity thing;\nInteger destination = thing.GetDestination();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDestination()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger destination = thing.GetDestination();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetName()
-  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetName()
-  id: 'GetName()'
-  so.intellisense: NSRelationDefinitionEntity.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSRelationDefinitionEntity.GetName()
-  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetName()
-  type: Method
-  summary: "\nActive text\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSRelationDefinitionEntity thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetPassiveText()
-  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetPassiveText()
-  id: 'GetPassiveText()'
-  so.intellisense: NSRelationDefinitionEntity.GetPassiveText
-  langs:
-  - crmscript
-  name: 'GetPassiveText()'
-  nameWithType: NSRelationDefinitionEntity.GetPassiveText()
-  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetPassiveText()
-  type: Method
-  summary: "\nText used in passive direction\n"
-  remarks: 
-  syntax: 
-    content: String GetPassiveText()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSRelationDefinitionEntity thing;\nString passiveText = thing.GetPassiveText();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetRank()
-  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSRelationDefinitionEntity.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSRelationDefinitionEntity.GetRank()
-  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetRank()
-  type: Method
-  summary: "\nRank order\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetReldefId()
-  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetReldefId()
-  id: 'GetReldefId()'
-  so.intellisense: NSRelationDefinitionEntity.GetReldefId
-  langs:
-  - crmscript
-  name: 'GetReldefId()'
-  nameWithType: NSRelationDefinitionEntity.GetReldefId()
-  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetReldefId()
-  type: Method
-  summary: "\nPrimary key\n"
-  remarks: 
-  syntax: 
-    content: Integer GetReldefId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger reldefId = thing.GetReldefId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetSource()
-  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetSource()
-  id: 'GetSource()'
-  so.intellisense: NSRelationDefinitionEntity.GetSource
-  langs:
-  - crmscript
-  name: 'GetSource()'
-  nameWithType: NSRelationDefinitionEntity.GetSource()
-  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetSource()
-  type: Method
-  summary: "\nThe source of the relation<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Contact</li><li>Enum: 2 = Person</li><li>Enum: 3 = Both</li></ul><pre><code>NSRelationDefinitionEntity thing;\nInteger source = thing.GetSource();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetSource()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger source = thing.GetSource();</code></pre>\n"
-- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSRelationDefinitionEntity.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSRelationDefinitionEntity.GetTooltip()
-  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetTooltip()
-  type: Method
-  summary: "\nTooltip or other description\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSRelationDefinitionEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRelationDefinitionEntity.#ctor
   commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.#ctor
   id: '#ctor'
@@ -204,6 +44,166 @@ items:
   syntax: 
     content: NSRelationDefinitionEntity
   example: 
+- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetDeleted()
+  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetDeleted()
+  id: 'GetDeleted()'
+  so.intellisense: NSRelationDefinitionEntity.GetDeleted
+  langs:
+  - crmscript
+  name: 'GetDeleted()'
+  nameWithType: NSRelationDefinitionEntity.GetDeleted()
+  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetDeleted()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetDeleted()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: True if deleted
+  example: 
+  - "\n<pre><code>NSRelationDefinitionEntity thing;\nBool deleted = thing.GetDeleted();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetDestination()
+  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetDestination()
+  id: 'GetDestination()'
+  so.intellisense: NSRelationDefinitionEntity.GetDestination
+  langs:
+  - crmscript
+  name: 'GetDestination()'
+  nameWithType: NSRelationDefinitionEntity.GetDestination()
+  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetDestination()
+  type: Method
+  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Contact</li><li>Enum: 2 = Person</li><li>Enum: 3 = Both</li></ul>\n"
+  remarks: 
+  syntax: 
+    content: Integer GetDestination()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The destination of the relation
+  example: 
+  - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger destination = thing.GetDestination();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetName()
+  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetName()
+  id: 'GetName()'
+  so.intellisense: NSRelationDefinitionEntity.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSRelationDefinitionEntity.GetName()
+  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Active text
+  example: 
+  - "\n<pre><code>NSRelationDefinitionEntity thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetPassiveText()
+  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetPassiveText()
+  id: 'GetPassiveText()'
+  so.intellisense: NSRelationDefinitionEntity.GetPassiveText
+  langs:
+  - crmscript
+  name: 'GetPassiveText()'
+  nameWithType: NSRelationDefinitionEntity.GetPassiveText()
+  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetPassiveText()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetPassiveText()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Text used in passive direction
+  example: 
+  - "\n<pre><code>NSRelationDefinitionEntity thing;\nString passiveText = thing.GetPassiveText();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetRank()
+  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSRelationDefinitionEntity.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSRelationDefinitionEntity.GetRank()
+  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetRank()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Rank order
+  example: 
+  - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetReldefId()
+  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetReldefId()
+  id: 'GetReldefId()'
+  so.intellisense: NSRelationDefinitionEntity.GetReldefId
+  langs:
+  - crmscript
+  name: 'GetReldefId()'
+  nameWithType: NSRelationDefinitionEntity.GetReldefId()
+  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetReldefId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetReldefId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: primary key
+  example: 
+  - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger reldefId = thing.GetReldefId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetSource()
+  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetSource()
+  id: 'GetSource()'
+  so.intellisense: NSRelationDefinitionEntity.GetSource
+  langs:
+  - crmscript
+  name: 'GetSource()'
+  nameWithType: NSRelationDefinitionEntity.GetSource()
+  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetSource()
+  type: Method
+  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = Contact</li><li>Enum: 2 = Person</li><li>Enum: 3 = Both</li></ul>\n"
+  remarks: 
+  syntax: 
+    content: Integer GetSource()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The source of the relation
+  example: 
+  - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger source = thing.GetSource();</code></pre>\n"
+- uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSRelationDefinitionEntity.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSRelationDefinitionEntity.GetTooltip()
+  fullName: CRMScript.NetServer.NSRelationDefinitionEntity.GetTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip or other description
+  example: 
+  - "\n<pre><code>NSRelationDefinitionEntity thing;\nString tooltip = thing.GetTooltip();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRelationDefinitionEntity.SetDeleted(Bool)
   commentId: M:CRMScript.NetServer.NSRelationDefinitionEntity.SetDeleted(Bool)
   id: 'SetDeleted(Bool)'
@@ -214,14 +214,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.SetDeleted(Bool)
   type: Method
-  summary: "\nTrue if deleted\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
     parameters:
     - id: deleted
       type: CRMScript.Global.Bool
-      description: 
+      description:  True if deleted
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.SetDestination(Integer)
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.SetDestination(Integer)
   type: Method
-  summary: "\nThe destination of the relation\n"
-  remarks: "\n<p>See enum destination.</p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetDestination(Integer destination)
     parameters:
     - id: destination
       type: CRMScript.Global.Integer
-      description: 
+      description: The destination of the relation. See enum destination.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -258,14 +258,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.SetName(String)
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.SetName(String)
   type: Method
-  summary: "\nActive text\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: Active text
     return:
       type: CRMScript.Global.Void
   example: 
@@ -280,14 +280,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.SetPassiveText(String)
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.SetPassiveText(String)
   type: Method
-  summary: "\nText used in passive direction\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPassiveText(String passiveText)
     parameters:
     - id: passiveText
       type: CRMScript.Global.String
-      description: 
+      description: Text used in passive direction
     return:
       type: CRMScript.Global.Void
   example: 
@@ -302,14 +302,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.SetRank(Integer)
   type: Method
-  summary: "\nRank order\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank order
     return:
       type: CRMScript.Global.Void
   example: 
@@ -324,14 +324,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.SetReldefId(Integer)
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.SetReldefId(Integer)
   type: Method
-  summary: "\nPrimary key\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetReldefId(Integer reldefId)
     parameters:
     - id: reldefId
       type: CRMScript.Global.Integer
-      description: 
+      description: Primary key
     return:
       type: CRMScript.Global.Void
   example: 
@@ -346,14 +346,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.SetSource(Integer)
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.SetSource(Integer)
   type: Method
-  summary: "\nThe source of the relation\n"
-  remarks: "\n<p>See enum source.</p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetSource(Integer source)
     parameters:
     - id: source
       type: CRMScript.Global.Integer
-      description: 
+      description: The source of the relation. See enum source.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -368,14 +368,14 @@ items:
   nameWithType: NSRelationDefinitionEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSRelationDefinitionEntity.SetTooltip(String)
   type: Method
-  summary: "\nTooltip or other description\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
     parameters:
     - id: tooltip
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip or other description
     return:
       type: CRMScript.Global.Void
   example: 
