--- a/docs/api-reference/CRMScript.NetServer.NSReplyTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReplyTemplate.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSReplyTemplate.#ctor
   - CRMScript.NetServer.NSReplyTemplate.GetDescription()
   - CRMScript.NetServer.NSReplyTemplate.GetFolderId()
   - CRMScript.NetServer.NSReplyTemplate.GetName()
   - CRMScript.NetServer.NSReplyTemplate.GetReplyTemplateId()
-  - CRMScript.NetServer.NSReplyTemplate.#ctor
   - CRMScript.NetServer.NSReplyTemplate.SetDescription(String)
   - CRMScript.NetServer.NSReplyTemplate.SetFolderId(Integer)
   - CRMScript.NetServer.NSReplyTemplate.SetName(String)
@@ -21,86 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSReplyTemplate.GetDescription()
-  commentId: M:CRMScript.NetServer.NSReplyTemplate.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSReplyTemplate.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSReplyTemplate.GetDescription()
-  fullName: CRMScript.NetServer.NSReplyTemplate.GetDescription()
-  type: Method
-  summary: "\nThe description for this reply template.\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSReplyTemplate thing;\nString description = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReplyTemplate.GetFolderId()
-  commentId: M:CRMScript.NetServer.NSReplyTemplate.GetFolderId()
-  id: 'GetFolderId()'
-  so.intellisense: NSReplyTemplate.GetFolderId
-  langs:
-  - crmscript
-  name: 'GetFolderId()'
-  nameWithType: NSReplyTemplate.GetFolderId()
-  fullName: CRMScript.NetServer.NSReplyTemplate.GetFolderId()
-  type: Method
-  summary: "\nThe ID of the folder in which this reply template is located. NULL or -1 if this is a toplevel reply template.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetFolderId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSReplyTemplate thing;\nInteger folderId = thing.GetFolderId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReplyTemplate.GetName()
-  commentId: M:CRMScript.NetServer.NSReplyTemplate.GetName()
-  id: 'GetName()'
-  so.intellisense: NSReplyTemplate.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSReplyTemplate.GetName()
-  fullName: CRMScript.NetServer.NSReplyTemplate.GetName()
-  type: Method
-  summary: "\nThe name for this reply template.\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSReplyTemplate thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReplyTemplate.GetReplyTemplateId()
-  commentId: M:CRMScript.NetServer.NSReplyTemplate.GetReplyTemplateId()
-  id: 'GetReplyTemplateId()'
-  so.intellisense: NSReplyTemplate.GetReplyTemplateId
-  langs:
-  - crmscript
-  name: 'GetReplyTemplateId()'
-  nameWithType: NSReplyTemplate.GetReplyTemplateId()
-  fullName: CRMScript.NetServer.NSReplyTemplate.GetReplyTemplateId()
-  type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
-  remarks: 
-  syntax: 
-    content: Integer GetReplyTemplateId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSReplyTemplate thing;\nInteger replyTemplateId = thing.GetReplyTemplateId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReplyTemplate.#ctor
   commentId: M:CRMScript.NetServer.NSReplyTemplate.#ctor
   id: '#ctor'
@@ -116,6 +36,86 @@ items:
   syntax: 
     content: NSReplyTemplate
   example: 
+- uid: CRMScript.NetServer.NSReplyTemplate.GetDescription()
+  commentId: M:CRMScript.NetServer.NSReplyTemplate.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSReplyTemplate.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSReplyTemplate.GetDescription()
+  fullName: CRMScript.NetServer.NSReplyTemplate.GetDescription()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The description for this reply template.
+  example: 
+  - "\n<pre><code>NSReplyTemplate thing;\nString description = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReplyTemplate.GetFolderId()
+  commentId: M:CRMScript.NetServer.NSReplyTemplate.GetFolderId()
+  id: 'GetFolderId()'
+  so.intellisense: NSReplyTemplate.GetFolderId
+  langs:
+  - crmscript
+  name: 'GetFolderId()'
+  nameWithType: NSReplyTemplate.GetFolderId()
+  fullName: CRMScript.NetServer.NSReplyTemplate.GetFolderId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetFolderId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The ID of the folder in which this reply template is located. NULL or -1 if this is a top-level reply template.
+  example: 
+  - "\n<pre><code>NSReplyTemplate thing;\nInteger folderId = thing.GetFolderId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReplyTemplate.GetName()
+  commentId: M:CRMScript.NetServer.NSReplyTemplate.GetName()
+  id: 'GetName()'
+  so.intellisense: NSReplyTemplate.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSReplyTemplate.GetName()
+  fullName: CRMScript.NetServer.NSReplyTemplate.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name for this reply template.
+  example: 
+  - "\n<pre><code>NSReplyTemplate thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReplyTemplate.GetReplyTemplateId()
+  commentId: M:CRMScript.NetServer.NSReplyTemplate.GetReplyTemplateId()
+  id: 'GetReplyTemplateId()'
+  so.intellisense: NSReplyTemplate.GetReplyTemplateId
+  langs:
+  - crmscript
+  name: 'GetReplyTemplateId()'
+  nameWithType: NSReplyTemplate.GetReplyTemplateId()
+  fullName: CRMScript.NetServer.NSReplyTemplate.GetReplyTemplateId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetReplyTemplateId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: The primary key (auto-incremented)
+  example: 
+  - "\n<pre><code>NSReplyTemplate thing;\nInteger replyTemplateId = thing.GetReplyTemplateId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReplyTemplate.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSReplyTemplate.SetDescription(String)
   id: 'SetDescription(String)'
@@ -126,14 +126,14 @@ items:
   nameWithType: NSReplyTemplate.SetDescription(String)
   fullName: CRMScript.NetServer.NSReplyTemplate.SetDescription(String)
   type: Method
-  summary: "\nThe description for this reply template.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description: The description for this reply template.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -148,14 +148,14 @@ items:
   nameWithType: NSReplyTemplate.SetFolderId(Integer)
   fullName: CRMScript.NetServer.NSReplyTemplate.SetFolderId(Integer)
   type: Method
-  summary: "\nThe ID of the folder in which this reply template is located. NULL or -1 if this is a toplevel reply template.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFolderId(Integer folderId)
     parameters:
     - id: folderId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the folder in which this reply template is located. NULL or -1 if this is a top-level reply template.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -170,14 +170,14 @@ items:
   nameWithType: NSReplyTemplate.SetName(String)
   fullName: CRMScript.NetServer.NSReplyTemplate.SetName(String)
   type: Method
-  summary: "\nThe name for this reply template.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The name for this reply template.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSReplyTemplate.SetReplyTemplateId(Integer)
   fullName: CRMScript.NetServer.NSReplyTemplate.SetReplyTemplateId(Integer)
   type: Method
-  summary: "\nThe primary key (auto-incremented)\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetReplyTemplateId(Integer replyTemplateId)
     parameters:
     - id: replyTemplateId
       type: CRMScript.Global.Integer
-      description: 
+      description:  The primary key (auto-incremented)
     return:
       type: CRMScript.Global.Void
   example: 
