--- a/docs/api-reference/CRMScript.NetServer.NSReportAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportAgent.yml
@@ -6,25 +6,41 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSReportAgent.#ctor
   - CRMScript.NetServer.NSReportAgent.CreateDefaultReportEntity()
   - CRMScript.NetServer.NSReportAgent.CreateDefaultReportLabelLayoutEntity()
   - CRMScript.NetServer.NSReportAgent.CreateFavorite(Integer,String,String)
   - CRMScript.NetServer.NSReportAgent.DeleteFavorite(Integer)
   - CRMScript.NetServer.NSReportAgent.DeleteReport(Integer)
   - CRMScript.NetServer.NSReportAgent.DeleteReportLabelLayoutEntity(Integer)
-  - CRMScript.NetServer.NSReportAgent.GenerateReport(Integer,Integer,String,String,String)
+  - CRMScript.NetServer.NSReportAgent.GenerateReport(Integer,Integer,String,String,String,NSArchiveRestrictionInfo[])
   - CRMScript.NetServer.NSReportAgent.GetReportEntity(Integer)
   - CRMScript.NetServer.NSReportAgent.GetReportLabelLayoutEntity(Integer)
   - CRMScript.NetServer.NSReportAgent.ImportReport(String)
-  - CRMScript.NetServer.NSReportAgent.#ctor
   - CRMScript.NetServer.NSReportAgent.SaveReportEntity(NSReportEntity)
-  - CRMScript.NetServer.NSReportAgent.SaveReportLabelLayoutEntity()
+  - CRMScript.NetServer.NSReportAgent.SaveReportLabelLayoutEntity(NSReportLabelLayoutEntity)
   - CRMScript.NetServer.NSReportAgent.UpdateFavorite(NSReportEntity)
   name: NSReportAgent
   nameWithType: NSReportAgent
   fullName: CRMScript.NetServer.NSReportAgent
   type: Class
   summary: "\nRun reports, set favorites, labels.\n"
+  example: 
+  - "\n<pre><code>NSReportAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
+- uid: CRMScript.NetServer.NSReportAgent.#ctor
+  commentId: M:CRMScript.NetServer.NSReportAgent.#ctor
+  id: '#ctor'
+  so.intellisense: Void.NSReportAgent
+  langs:
+  - crmscript
+  name: '#ctor'
+  nameWithType: NSReportAgent.#ctor
+  fullName: CRMScript.NetServer.NSReportAgent.#ctor
+  type: Constructor
+  summary: "\nRun reports, set favorites, labels.\n"
+  remarks: 
+  syntax: 
+    content: NSReportAgent
   example: 
   - "\n<pre><code>NSReportAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportAgent.CreateDefaultReportEntity()
@@ -75,14 +91,14 @@ items:
   nameWithType: NSReportAgent.CreateFavorite(Integer,String,String)
   fullName: CRMScript.NetServer.NSReportAgent.CreateFavorite(Integer,String,String)
   type: Method
-  summary: "\nCreates the report as favorite. The sourceId is the key to the report that the favorite is based on.\n"
+  summary: "\nCreates the report as favorite.\n"
   remarks: 
   syntax: 
     content: NSReportEntity CreateFavorite(Integer sourceId, String name, String description)
     parameters:
     - id: sourceId
       type: CRMScript.Global.Integer
-      description: 
+      description: the key to the report that the favorite is based on.
     - id: name
       type: CRMScript.Global.String
       description: 
@@ -124,14 +140,14 @@ items:
   nameWithType: NSReportAgent.DeleteReport(Integer)
   fullName: CRMScript.NetServer.NSReportAgent.DeleteReport(Integer)
   type: Method
-  summary: "\nDeletes the report with the given id<p></p>\n<ul><li><strong>ReportId</strong>The ID of the report to delete</li></ul>\n"
+  summary: "\nDeletes the report with the given ID.\n"
   remarks: 
   syntax: 
     content: Bool DeleteReport(Integer reportId)
     parameters:
     - id: reportId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the report to delete
     return:
       type: CRMScript.Global.Bool
       description:
@@ -147,48 +163,51 @@ items:
   nameWithType: NSReportAgent.DeleteReportLabelLayoutEntity(Integer)
   fullName: CRMScript.NetServer.NSReportAgent.DeleteReportLabelLayoutEntity(Integer)
   type: Method
-  summary: "\nDeletes the NSReportLabelLayoutEntity<p></p>\n<ul><li><strong>ReportLabelLayoutEntityId</strong>The identity of the ReportLabelLayoutEntity to delete.</li></ul><pre><code>NSReportAgent agent;\nagent.DeleteReportLabelLayoutEntity(123);</code></pre>\n"
+  summary: "\nDeletes the NSReportLabelLayoutEntity\n"
   remarks: 
   syntax: 
     content: DeleteReportLabelLayoutEntity(Integer reportLabelLayoutEntity)
     parameters:
     - id: reportLabelLayoutEntity
       type: CRMScript.Global.Integer
-      description: 
+      description: The identity of the ReportLabelLayoutEntity to delete.
     return:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSReportAgent agent;\nagent.DeleteReportLabelLayoutEntity(123);</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportAgent.GenerateReport(Integer,Integer,String,String,String)
-  commentId: M:CRMScript.NetServer.NSReportAgent.GenerateReport(Integer,Integer,String,String,String)
-  id: 'GenerateReport(Integer,Integer,String,String,String)'
+- uid: CRMScript.NetServer.NSReportAgent.GenerateReport(Integer,Integer,String,String,String,NSArchiveRestrictionInfo[])
+  commentId: M:CRMScript.NetServer.NSReportAgent.GenerateReport(Integer,Integer,String,String,String,NSArchiveRestrictionInfo[])
+  id: 'GenerateReport(Integer,Integer,String,String,String,NSArchiveRestrictionInfo[])'
   so.intellisense: NSReportAgent.GenerateReport
   langs:
   - crmscript
-  name: 'GenerateReport(Integer,Integer,String,String,String)'
-  nameWithType: NSReportAgent.GenerateReport(Integer,Integer,String,String,String)
-  fullName: CRMScript.NetServer.NSReportAgent.GenerateReport(Integer,Integer,String,String,String)
+  name: 'GenerateReport(Integer,Integer,String,String,String,NSArchiveRestrictionInfo[])'
+  nameWithType: NSReportAgent.GenerateReport(Integer,Integer,String,String,String,NSArchiveRestrictionInfo[])
+  fullName: CRMScript.NetServer.NSReportAgent.GenerateReport(Integer,Integer,String,String,String,NSArchiveRestrictionInfo[])
   type: Method
-  summary: "\nGenerates the report in PDF format<p></p>\n<ul><li><strong>ReportId</strong>The ID of the report.</li><li><strong>labelLayoutId</strong>The ID of the labellayout. Use 0 if the report isn't of type label.</li><li><strong>filename</strong>Filename of the report.</li><li><strong>language</strong>Language to use when generating the report.</li><li><strong>fileType</strong></li><li><strong>restrictions</strong>Use restrictions to provide additional restrictions when generating the report.</li></ul>\n"
+  summary: "\nGenerates the report in PDF format.\n"
   remarks: 
   syntax: 
     content: String GenerateReport(Integer reportId, Integer labelLayoutId, String filename, String language, String fileType, NSArchiveRestrictionInfo[] restrictions)
     parameters:
     - id: reportId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the report.
     - id: labelLayoutId
       type: CRMScript.Global.Integer
-      description: 
+      description: The ID of the label layout. Use 0 if the report isn't of type label.
     - id: filename
       type: CRMScript.Global.String
-      description: 
+      description: Filename of the report.
     - id: language
       type: CRMScript.Global.String
-      description: 
+      description: Language to use when generating the report.
     - id: fileType
       type: CRMScript.Global.String
       description: 
+    - id: restrictions
+      type: CRMScript.NetServer.NSArchiveRestrictionInfo[]
+      description: Use restrictions to provide additional restrictions when generating the report.
     return:
       type: CRMScript.Global.String
       description:
@@ -204,14 +223,14 @@ items:
   nameWithType: NSReportAgent.GetReportEntity(Integer)
   fullName: CRMScript.NetServer.NSReportAgent.GetReportEntity(Integer)
   type: Method
-  summary: "\nGets an NSReportEntity object.<p></p>\n<ul><li><strong>ReportEntityId</strong>The identifier of the NSReportEntity object</li></ul>\n"
+  summary: "\nGets an NSReportEntity object.\n"
   remarks: 
   syntax: 
     content: NSReportEntity GetReportEntity(Integer reportEntityId)
     parameters:
     - id: reportEntityId
       type: CRMScript.Global.Integer
-      description: 
+      description: The identifier of the NSReportEntity object
     return:
       type: CRMScript.NetServer.NSReportEntity
   example: 
@@ -226,14 +245,14 @@ items:
   nameWithType: NSReportAgent.GetReportLabelLayoutEntity(Integer)
   fullName: CRMScript.NetServer.NSReportAgent.GetReportLabelLayoutEntity(Integer)
   type: Method
-  summary: "\nGets an NSReportLabelLayoutEntity object.<p></p>\n<ul><li><strong>ReportLabelLayoutEntityId</strong>The identifier of the NSReportLabelLayoutEntity object</li></ul>\n"
+  summary: "\nGets an NSReportLabelLayoutEntity object.\n"
   remarks: 
   syntax: 
     content: NSReportLabelLayoutEntity GetReportLabelLayoutEntity(Integer reportLabelLayoutEntityId)
     parameters:
     - id: reportLabelLayoutEntityId
       type: CRMScript.Global.Integer
-      description: 
+      description: The identifier of the NSReportLabelLayoutEntity object
     return:
       type: CRMScript.NetServer.NSReportLabelLayoutEntity
   example: 
@@ -248,35 +267,19 @@ items:
   nameWithType: NSReportAgent.ImportReport(String)
   fullName: CRMScript.NetServer.NSReportAgent.ImportReport(String)
   type: Method
-  summary: "\nTakes the input stream and create a report. This stream must be on a valid xml format<p></p>\n<ul><li><strong>Report</strong>The report to import in a correct xml format</li></ul>\n"
+  summary: "\nTakes the input stream and create a report. This stream must be on a valid XML format.\n"
   remarks: 
   syntax: 
     content: Integer ImportReport(String report)
     parameters:
     - id: report
       type: CRMScript.Global.String
-      description: 
+      description: The report to import in a correct XML format
     return:
       type: CRMScript.Global.Integer
       description:
   example: 
   - "\n<pre><code>NSReportAgent agent;\nString report;\nInteger res = agent.ImportReport(report);</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportAgent.#ctor
-  commentId: M:CRMScript.NetServer.NSReportAgent.#ctor
-  id: '#ctor'
-  so.intellisense: Void.NSReportAgent
-  langs:
-  - crmscript
-  name: '#ctor'
-  nameWithType: NSReportAgent.#ctor
-  fullName: CRMScript.NetServer.NSReportAgent.#ctor
-  type: Constructor
-  summary: "\nRun reports, set favorites, labels.\n"
-  remarks: 
-  syntax: 
-    content: NSReportAgent
-  example: 
-  - "\n<pre><code>NSReportAgent agent;\nagent.callMethod(arg1, arg2);</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportAgent.SaveReportEntity(NSReportEntity)
   commentId: M:CRMScript.NetServer.NSReportAgent.SaveReportEntity(NSReportEntity)
   id: 'SaveReportEntity(NSReportEntity)'
@@ -287,35 +290,39 @@ items:
   nameWithType: NSReportAgent.SaveReportEntity(NSReportEntity)
   fullName: CRMScript.NetServer.NSReportAgent.SaveReportEntity(NSReportEntity)
   type: Method
-  summary: "\nUpdates the existing NSReportEntity or creates a new NSReportEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>reportEntity</strong>The NSReportEntity to save.</li></ul>\n"
+  summary: "\nUpdates the existing NSReportEntity or creates a new NSReportEntity if the id parameter is 0\n"
   remarks: 
   syntax: 
     content: NSReportEntity SaveReportEntity(NSReportEntity reportEntity)
     parameters:
     - id: reportEntity
       type: CRMScript.NetServer.NSReportEntity
-      description: 
+      description: The NSReportEntity to save.
     return:
       type: CRMScript.NetServer.NSReportEntity
   example: 
   - "\n<pre><code>NSReport  agent;\nNSReportEntity thing = agent.CreateDefaultReportEntity();\nthing = agent.SaveReportEntity(thing);</code></pre>\n"
-- uid: CRMScript.NetServer.NSReportAgent.SaveReportLabelLayoutEntity()
-  commentId: M:CRMScript.NetServer.NSReportAgent.SaveReportLabelLayoutEntity()
-  id: 'SaveReportLabelLayoutEntity()'
+- uid: CRMScript.NetServer.NSReportAgent.SaveReportLabelLayoutEntity(NSReportLabelLayoutEntity)
+  commentId: M:CRMScript.NetServer.NSReportAgent.SaveReportLabelLayoutEntity(NSReportLabelLayoutEntity)
+  id: 'SaveReportLabelLayoutEntity(NSReportLabelLayoutEntity)'
   so.intellisense: NSReportAgent.SaveReportLabelLayoutEntity
   langs:
   - crmscript
-  name: 'SaveReportLabelLayoutEntity()'
-  nameWithType: NSReportAgent.SaveReportLabelLayoutEntity()
-  fullName: CRMScript.NetServer.NSReportAgent.SaveReportLabelLayoutEntity()
+  name: 'SaveReportLabelLayoutEntity(NSReportLabelLayoutEntity)'
+  nameWithType: NSReportAgent.SaveReportLabelLayoutEntity(NSReportLabelLayoutEntity)
+  fullName: CRMScript.NetServer.NSReportAgent.SaveReportLabelLayoutEntity(NSReportLabelLayoutEntity)
   type: Method
-  summary: "\nCRMScript method in the NSReportAgent class that creates or updates an NSReportLabelLayoutEntityUpdates the existing NSReportLabelLayoutEntity or creates a new NSReportLabelLayoutEntity if the ID parameter is 0.<p></p>\nReturns the new or updated NSReportLabelLayoutEntity.<p></p>\n<code>NSReportLabelLayoutEntity SaveReportLabelLayoutEntity(NSReportLabelLayoutEntity reportLabelLayoutEntity)</code>\n"
+  summary: "\nUpdates the existing NSReportLabelLayoutEntity or creates a new NSReportLabelLayoutEntity if the ID parameter is 0.\n"
   remarks: 
   syntax: 
-    content: SaveReportLabelLayoutEntity()
-    parameters: []
+    content: NSReportLabelLayoutEntity SaveReportLabelLayoutEntity(NSReportLabelLayoutEntity reportLabelLayoutEntity)
+    parameters:
+    - id: reportLabelLayoutEntity
+      type: CRMScript.NetServer.NSReportLabelLayoutEntity
+      description: 
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.NetServer.NSReportLabelLayoutEntity
+      description: the new or updated NSReportLabelLayoutEntity.
   example: 
   - "\n<pre><code>NSReport  agent;\nNSReportLabelLayoutEntity thing = agent.CreateDefaultReportLabelLayoutEntity();\nthing = agent.SaveReportLabelLayoutEntity(thing);</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportAgent.UpdateFavorite(NSReportEntity)
@@ -328,14 +335,14 @@ items:
   nameWithType: NSReportAgent.UpdateFavorite(NSReportEntity)
   fullName: CRMScript.NetServer.NSReportAgent.UpdateFavorite(NSReportEntity)
   type: Method
-  summary: "\nUpdates the favorite.<p></p>\n<ul><li><strong>ReportEntity</strong>ReportEntity carrier containg updated data.</li></ul>\n"
+  summary: "\nUpdates the favorite.\n"
   remarks: 
   syntax: 
     content: NSReportEntity UpdateFavorite(NSReportEntity reportEntity)
     parameters:
     - id: reportEntity
       type: CRMScript.NetServer.NSReportEntity
-      description: 
+      description: ReportEntity carrier containing updated data.
     return:
       type: CRMScript.NetServer.NSReportEntity
   example: 
