--- a/docs/api-reference/CRMScript.NetServer.NSReturnInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReturnInfo.yml
@@ -6,13 +6,13 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSReturnInfo.#ctor
   - CRMScript.NetServer.NSReturnInfo.GetAdditionalInfo()
   - CRMScript.NetServer.NSReturnInfo.GetExternalReference()
   - CRMScript.NetServer.NSReturnInfo.GetSuccess()
   - CRMScript.NetServer.NSReturnInfo.GetType()
   - CRMScript.NetServer.NSReturnInfo.GetValue()
   - CRMScript.NetServer.NSReturnInfo.GetVersionId()
-  - CRMScript.NetServer.NSReturnInfo.#ctor
   - CRMScript.NetServer.NSReturnInfo.SetAdditionalInfo(String)
   - CRMScript.NetServer.NSReturnInfo.SetExternalReference(String)
   - CRMScript.NetServer.NSReturnInfo.SetSuccess(Bool)
@@ -25,126 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSReturnInfo.GetAdditionalInfo()
-  commentId: M:CRMScript.NetServer.NSReturnInfo.GetAdditionalInfo()
-  id: 'GetAdditionalInfo()'
-  so.intellisense: NSReturnInfo.GetAdditionalInfo
-  langs:
-  - crmscript
-  name: 'GetAdditionalInfo()'
-  nameWithType: NSReturnInfo.GetAdditionalInfo()
-  fullName: CRMScript.NetServer.NSReturnInfo.GetAdditionalInfo()
-  type: Method
-  summary: "\nOptional, additional information meant for further processing. This member is ignored for return types None, Message and SoProtocol. It can be used to pass execution-dependent information to the code that handles CustomGui and Other.\n"
-  remarks: 
-  syntax: 
-    content: String GetAdditionalInfo()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSReturnInfo thing;\nString additionalInfo = thing.GetAdditionalInfo();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReturnInfo.GetExternalReference()
-  commentId: M:CRMScript.NetServer.NSReturnInfo.GetExternalReference()
-  id: 'GetExternalReference()'
-  so.intellisense: NSReturnInfo.GetExternalReference
-  langs:
-  - crmscript
-  name: 'GetExternalReference()'
-  nameWithType: NSReturnInfo.GetExternalReference()
-  fullName: CRMScript.NetServer.NSReturnInfo.GetExternalReference()
-  type: Method
-  summary: "\nThe document plugin's key that uniquely identifies a document; stored in the externalReference field of the document table\n"
-  remarks: 
-  syntax: 
-    content: String GetExternalReference()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSReturnInfo thing;\nString externalReference = thing.GetExternalReference();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReturnInfo.GetSuccess()
-  commentId: M:CRMScript.NetServer.NSReturnInfo.GetSuccess()
-  id: 'GetSuccess()'
-  so.intellisense: NSReturnInfo.GetSuccess
-  langs:
-  - crmscript
-  name: 'GetSuccess()'
-  nameWithType: NSReturnInfo.GetSuccess()
-  fullName: CRMScript.NetServer.NSReturnInfo.GetSuccess()
-  type: Method
-  summary: "\nid the call succeed. A successful call may still return a message or other return value.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetSuccess()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-      description:
-  example: 
-  - "\n<pre><code>NSReturnInfo thing;\nBool success = thing.GetSuccess();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReturnInfo.GetType()
-  commentId: M:CRMScript.NetServer.NSReturnInfo.GetType()
-  id: 'GetType()'
-  so.intellisense: NSReturnInfo.GetType
-  langs:
-  - crmscript
-  name: 'GetType()'
-  nameWithType: NSReturnInfo.GetType()
-  fullName: CRMScript.NetServer.NSReturnInfo.GetType()
-  type: Method
-  summary: "\nHow is the return value to be understood by the caller\n"
-  remarks: 
-  syntax: 
-    content: Integer GetType()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description: See <xref href=\"CRMScript.NetServer.ReturnType\" data-throw-if-not-resolved=\"false\"></xref>.
-  example: 
-  - "\n<pre><code>NSReturnInfo thing;\nInteger type = thing.GetType();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReturnInfo.GetValue()
-  commentId: M:CRMScript.NetServer.NSReturnInfo.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSReturnInfo.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSReturnInfo.GetValue()
-  fullName: CRMScript.NetServer.NSReturnInfo.GetValue()
-  type: Method
-  summary: "\nReturn value, may be blank.\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSReturnInfo thing;\nString value = thing.GetValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSReturnInfo.GetVersionId()
-  commentId: M:CRMScript.NetServer.NSReturnInfo.GetVersionId()
-  id: 'GetVersionId()'
-  so.intellisense: NSReturnInfo.GetVersionId
-  langs:
-  - crmscript
-  name: 'GetVersionId()'
-  nameWithType: NSReturnInfo.GetVersionId()
-  fullName: CRMScript.NetServer.NSReturnInfo.GetVersionId()
-  type: Method
-  summary: "\nThe document plugin's version id that uniquely identifies one version of a document. If versioning is not supported, this will be blank. When versioning is supported, blank values imply the latest checked-in version.\n"
-  remarks: 
-  syntax: 
-    content: String GetVersionId()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSReturnInfo thing;\nString versionId = thing.GetVersionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReturnInfo.#ctor
   commentId: M:CRMScript.NetServer.NSReturnInfo.#ctor
   id: '#ctor'
@@ -160,6 +40,126 @@ items:
   syntax: 
     content: NSReturnInfo
   example: 
+- uid: CRMScript.NetServer.NSReturnInfo.GetAdditionalInfo()
+  commentId: M:CRMScript.NetServer.NSReturnInfo.GetAdditionalInfo()
+  id: 'GetAdditionalInfo()'
+  so.intellisense: NSReturnInfo.GetAdditionalInfo
+  langs:
+  - crmscript
+  name: 'GetAdditionalInfo()'
+  nameWithType: NSReturnInfo.GetAdditionalInfo()
+  fullName: CRMScript.NetServer.NSReturnInfo.GetAdditionalInfo()
+  type: Method
+  summary: ""
+  remarks: "\nThis member is ignored for return types None, Message and SoProtocol. It can be used to pass execution-dependent information to the code that handles CustomGui and Other.\n"
+  syntax: 
+    content: String GetAdditionalInfo()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Optional, additional information meant for further processing.
+  example: 
+  - "\n<pre><code>NSReturnInfo thing;\nString additionalInfo = thing.GetAdditionalInfo();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReturnInfo.GetExternalReference()
+  commentId: M:CRMScript.NetServer.NSReturnInfo.GetExternalReference()
+  id: 'GetExternalReference()'
+  so.intellisense: NSReturnInfo.GetExternalReference
+  langs:
+  - crmscript
+  name: 'GetExternalReference()'
+  nameWithType: NSReturnInfo.GetExternalReference()
+  fullName: CRMScript.NetServer.NSReturnInfo.GetExternalReference()
+  type: Method
+  summary: ""
+  remarks: "\nStored in the externalReference field of the document table\n"
+  syntax: 
+    content: String GetExternalReference()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The document plugin's key that uniquely identifies a document
+  example: 
+  - "\n<pre><code>NSReturnInfo thing;\nString externalReference = thing.GetExternalReference();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReturnInfo.GetSuccess()
+  commentId: M:CRMScript.NetServer.NSReturnInfo.GetSuccess()
+  id: 'GetSuccess()'
+  so.intellisense: NSReturnInfo.GetSuccess
+  langs:
+  - crmscript
+  name: 'GetSuccess()'
+  nameWithType: NSReturnInfo.GetSuccess()
+  fullName: CRMScript.NetServer.NSReturnInfo.GetSuccess()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Bool GetSuccess()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Did the call succeed. A successful call may still return a message or other return value.
+  example: 
+  - "\n<pre><code>NSReturnInfo thing;\nBool success = thing.GetSuccess();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReturnInfo.GetType()
+  commentId: M:CRMScript.NetServer.NSReturnInfo.GetType()
+  id: 'GetType()'
+  so.intellisense: NSReturnInfo.GetType
+  langs:
+  - crmscript
+  name: 'GetType()'
+  nameWithType: NSReturnInfo.GetType()
+  fullName: CRMScript.NetServer.NSReturnInfo.GetType()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetType()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: How is the return value to be understood by the caller. See <xref href=\"CRMScript.NetServer.ReturnType\" data-throw-if-not-resolved=\"false\"></xref>.
+  example: 
+  - "\n<pre><code>NSReturnInfo thing;\nInteger type = thing.GetType();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReturnInfo.GetValue()
+  commentId: M:CRMScript.NetServer.NSReturnInfo.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSReturnInfo.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSReturnInfo.GetValue()
+  fullName: CRMScript.NetServer.NSReturnInfo.GetValue()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Return value, may be blank.
+  example: 
+  - "\n<pre><code>NSReturnInfo thing;\nString value = thing.GetValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSReturnInfo.GetVersionId()
+  commentId: M:CRMScript.NetServer.NSReturnInfo.GetVersionId()
+  id: 'GetVersionId()'
+  so.intellisense: NSReturnInfo.GetVersionId
+  langs:
+  - crmscript
+  name: 'GetVersionId()'
+  nameWithType: NSReturnInfo.GetVersionId()
+  fullName: CRMScript.NetServer.NSReturnInfo.GetVersionId()
+  type: Method
+  summary: ""
+  remarks: "\nIf versioning is not supported, this will be blank. When versioning is supported, blank values imply the latest checked-in version.\n"
+  syntax: 
+    content: String GetVersionId()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The document plugin's version id that uniquely identifies one version of a document.
+  example: 
+  - "\n<pre><code>NSReturnInfo thing;\nString versionId = thing.GetVersionId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReturnInfo.SetAdditionalInfo(String)
   commentId: M:CRMScript.NetServer.NSReturnInfo.SetAdditionalInfo(String)
   id: 'SetAdditionalInfo(String)'
@@ -170,14 +170,14 @@ items:
   nameWithType: NSReturnInfo.SetAdditionalInfo(String)
   fullName: CRMScript.NetServer.NSReturnInfo.SetAdditionalInfo(String)
   type: Method
-  summary: "\nOptional, additional information meant for further processing. This member is ignored for return types None, Message and SoProtocol. It can be used to pass execution-dependent information to the code that handles CustomGui and Other.\n"
-  remarks: 
+  summary: ""
+  remarks: "\nThis member is ignored for return types None, Message and SoProtocol. It can be used to pass execution-dependent information to the code that handles CustomGui and Other.\n"
   syntax: 
     content: Void SetAdditionalInfo(String additionalInfo)
     parameters:
     - id: additionalInfo
       type: CRMScript.Global.String
-      description: 
+      description: Optional, additional information meant for further processing.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -192,14 +192,14 @@ items:
   nameWithType: NSReturnInfo.SetExternalReference(String)
   fullName: CRMScript.NetServer.NSReturnInfo.SetExternalReference(String)
   type: Method
-  summary: "\nThe document plugin's key that uniquely identifies a document; stored in the externalReference field of the document table\n"
-  remarks: 
+  summary: ""
+  remarks: "\nStored in the externalReference field of the document table\n"
   syntax: 
     content: Void SetExternalReference(String externalReference)
     parameters:
     - id: externalReference
       type: CRMScript.Global.String
-      description: 
+      description: The document plugin's key that uniquely identifies a document
     return:
       type: CRMScript.Global.Void
   example: 
@@ -214,14 +214,14 @@ items:
   nameWithType: NSReturnInfo.SetSuccess(Bool)
   fullName: CRMScript.NetServer.NSReturnInfo.SetSuccess(Bool)
   type: Method
-  summary: "\nid the call succeed. A successful call may still return a message or other return value.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSuccess(Bool success)
     parameters:
     - id: success
       type: CRMScript.Global.Bool
-      description: 
+      description: Did the call succeed. A successful call may still return a message or other return value.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -236,14 +236,14 @@ items:
   nameWithType: NSReturnInfo.SetType(Integer)
   fullName: CRMScript.NetServer.NSReturnInfo.SetType(Integer)
   type: Method
-  summary: "\nHow is the return value to be understood by the caller\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetType(Integer type)
-    parameters:
+    parameters: 
     - id: type
       type: CRMScript.Global.Integer
-      description: See <xref href=\"CRMScript.NetServer.ReturnType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: How is the return value to be understood by the caller See <xref href=\"CRMScript.NetServer.ReturnType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSReturnInfo thing;\nInteger type;\nthing.SetType(type);</code></pre>\n"
 - uid: CRMScript.NetServer.NSReturnInfo.SetValue(String)
@@ -256,14 +256,14 @@ items:
   nameWithType: NSReturnInfo.SetValue(String)
   fullName: CRMScript.NetServer.NSReturnInfo.SetValue(String)
   type: Method
-  summary: "\nReturn value, may be blank.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValue(String value)
     parameters:
     - id: value
       type: CRMScript.Global.String
-      description: 
+      description: Return value, may be blank.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -278,14 +278,14 @@ items:
   nameWithType: NSReturnInfo.SetVersionId(String)
   fullName: CRMScript.NetServer.NSReturnInfo.SetVersionId(String)
   type: Method
-  summary: "\nThe document plugin's version id that uniquely identifies one version of a document. If versioning is not supported, this will be blank. When versioning is supported, blank values imply the latest checked-in version.\n"
-  remarks: 
+  summary: ""
+  remarks: "\nIf versioning is not supported, this will be blank. When versioning is supported, blank values imply the latest checked-in version.\n"
   syntax: 
     content: Void SetVersionId(String versionId)
     parameters:
     - id: versionId
       type: CRMScript.Global.String
-      description: 
+      description: The document plugin's version id that uniquely identifies one version of a document.
     return:
       type: CRMScript.Global.Void
   example: 
